--- a/app/index.html
+++ b/app/index.html
@@ -9,8 +9,6 @@
     <meta name="keywords" content="Website">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css">
     <!-- ** STYLE ** -->
-    <!-- <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap" rel="stylesheet"> -->
-    <!--    <link rel="stylesheet" href="./fonts/stylesheet.css">-->
     <link rel="stylesheet" href="css/style.css">
     <!-- Fav-icon -->
     <!-- <link rel="icon" type="image/png" href="./img/fav.ico"> -->
@@ -25,11 +23,11 @@
 </header>
 
 <main>
-    <div class="banner">
+    <section class="banner">
         <div class="container">
 
         </div>
-    </div>
+    </section>
 </main>
 
 <footer class="footer">
