--- a/src/html/discounts.html
+++ b/src/html/discounts.html
@@ -7,10 +7,9 @@
         alt="Image">
 
     <div class="container mx-auto relative z-20 pt-32 md:pt-64">
-        <h1 class="md:text-5xl lg:text-6xl text-3xl text-white font-normalidad font-bold mb-5">Новости</h1>
+        <h1 class="md:text-5xl lg:text-6xl text-3xl text-white font-normalidad font-bold mb-5">Акции</h1>
         <div class="md:flex justify-between items-center">
-            <p class="md:text-lg text-white text-sm">Ваше будущее жилье — в наших руках. Мы понимаем, как важны для вас
-                шаги.</p>
+            <p class="md:text-lg text-white text-sm">Ваше будущее жилье — в наших руках. Мы понимаем, как важны для вас шаги.</p>
             <div class="select group relative z-40 flex md:hidden border-white/40 border-[1px] rounded-[10px] mt-7">
                 <div class="select__head flex items-center justify-between w-full h-12 px-4">
                     <span class="text-sm text-white font-bold">OM Club House</span>
@@ -25,6 +24,7 @@
                     </button>
                 </div>
             </div>
+
             <div class="md:flex hidden">
                 <ul class="flex py-6 gap-10">
                     <li class="text-white opacity-100">
@@ -51,14 +51,14 @@
             </div>
         </div>
         <div class="md:grid-cols-2 lg:grid-cols-3 grid grid-cols-1 gap-x-5 gap-y-10 mt-12">
-            @@include('blocks/news/newsItem.html')
-            @@include('blocks/news/newsItem.html')
-            @@include('blocks/news/newsItem.html')
-            @@include('blocks/news/newsItem.html')
-            @@include('blocks/news/newsItem.html')
-            @@include('blocks/news/newsItem.html')
+            @@include('blocks/discounts/discountsItem.html')
+            @@include('blocks/discounts/discountsItem.html')
+            @@include('blocks/discounts/discountsItem.html')
+            @@include('blocks/discounts/discountsItem.html')
+            @@include('blocks/discounts/discountsItem.html')
+            @@include('blocks/discounts/discountsItem.html')
         </div>
-        <button class="text-white h-[60px] rounded-[10px] border-white border-[1px] cursor-pointer px-7 mx-auto block mt-12">
+        <button class="text-white h-[60px] rounded-[10px] border-white border-[1px] px-7 cursor-pointer mx-auto block mt-12">
             Показать больше
         </button>
     </div>
