--- a/src/html/blocks/footer.html
+++ b/src/html/blocks/footer.html
@@ -1,9 +1,11 @@
-	<footer class="mt-a">
-		<div class="container">
-			<h2>FOOTER</h2>
-		</div>
-	</footer>
-	
-	<script src="./../../js/index.js"></script>
-	</body>
+<footer class="mt-a">
+	<div class="container">
+		<h2>FOOTER</h2>
+	</div>
+</footer>
+
+<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+<script src="./../../js/index.js"></script>
+</body>
+
 </html>
