Full News Single Page

--- a/src/html/newsSingle.html
+++ b/src/html/newsSingle.html
@@ -1,30 +1,37 @@
 @@include('blocks/header.html')
 
 <section class="bg-blue-500 pt-64">
-    <div class="container">
-        <div class="pb-14">
+    <div class="bg-[url('/img/news/bgd-single.jpg')] absolute top-0 left-0 w-full h-screen z-0 opacity-70">
+        <div class="bg-gradient-to-t from-blue-500 absolute top-0 left-0 w-full h-full"></div>
+    </div>
+    <div class="container relative z-10">
+        <div class="absolute right-0 bottom-56 w-72 h-72 z-10">
+            <img src="./../img/icons/vector-logo.svg" alt="vector-logo">
+        </div>
+
+        <div class="pb-14 max-w-[1047px]">
             <div
                 class="flex before:w-[6px] before:rounded-sm before:h-[6px] before:bg-white before:mr-[10px] opacity-60 items-center">
                 <span class="text-white text-sm">5 апреля 2024</span>
             </div>
-            <h1 class="text-white text-[30px] font-bold break-words mt-4 leading-9">
+            <h1 class="text-white text-[30px] font-bold break-words mt-4 leading-9 md:leading-tight md:max-w-[876px] md:text-[65px]">
                 Программы «еОселя» и «еВосстановление» заработали для LUCKY LAND
             </h1>
-            <a href="#" class="rounded-full border-[1px] border-white w-10 h-10 flex items-center justify-center mt-8 mb-14">
-                <img src="./../img/icons/socials.svg" alt="Soc">
+            <a href="#"
+                class="rounded-full border-[1px] border-white w-10 h-10 flex items-center justify-center mt-8 mb-14 md:w-14 md:h-14">
+                <img src="./../img/icons/socials.svg" class="md:w-6" alt="Soc">
             </a>
-            <b class="text-white text-base mb-2 block">
+            <b class="text-white text-base md:text-xl mb-2 block">
                 Квартиры в эко-городе LUCKY LAND от строительной компании DIM теперь можно приобрести по государственным
                 программам доступного кредитования жилья «еОселя» и компенсации за разрушенное или поврежденное жилье
                 «еВосстановление».
             </b>
-            <p class="text-white text-base my-2">
+            <p class="text-white text-base md:text-xl my-2 md:my-12">
                 Дополнительные опции приобретения жилья в LUCKY LAND открылись благодаря тому, что дом №3 эко-города
                 недавно получил официальный адрес.
             </p>
-            <blockquote class="text-white text-base mt-7">
-                <div
-                    class="before:h-[1px] before:w-10 before:bg-blue-400 before:mr-3 before:block after:h-[1px] after:w-10 after:bg-blue-400 after:ml-3 after:block flex items-center mb-4">
+            <blockquote class="text-white text-base md:text-xl mt-7 md:pl-9 relative">
+                <div class="md:absolute md:left-0 md:before:w-[1px] md:before:h-10 before:h-[1px] before:w-10 before:bg-blue-400 before:mr-3 before:block md:after:h-10 md:after:w-[1px] after:h-[1px] after:w-10 after:bg-blue-400 after:ml-3 md:after:ml-0 md:before:mb-3 md:after:mt-3 md:before:mr-0 after:block flex md:flex-col items-center mb-4">
                     <img src="./../img/icons/quotes.svg" alt="Quotes">
                 </div>
                 «Сегодня мы получаем все больше запросов на покупку недвижимости по государственным программам. Поэтому
@@ -32,16 +39,16 @@
                 программам. Для нас важно реализовать все возможности, которые сделают для украинцев покупку жилья более
                 комфортной», — комментирует управляющий партнер группы компаний DIM Александр Насиковский.
             </blockquote>
-            <p class="text-white text-base my-2">
+            <p class="text-white text-base md:text-xl my-2 md:my-12">
                 Программа «еОселя» – это государственная инициатива для поддержки населения, желающего приобрести
                 собственное жилье. Она дает желающим возможность получить ипотеку от государства с фиксированной ставкой
                 от 3 до 7% сроком до 20 лет.
             </p>
-            <p class="text-white text-base my-2">
+            <p class="text-white text-base md:text-xl my-2 md:my-12">
                 Программа «еВосстановление» — государственная программа помощи владельцам разрушенного или поврежденного
                 в результате войны жилья, позволяющая получить компенсацию в зависимости от уровня ущерба.
             </p>
-            <p class="text-white text-base mt-8">
+            <p class="text-white text-base md:text-xl mt-8">
                 Узнать больше об условиях приобретения квартиры в LUCKY LAND по одной из программ можно в отделе продаж
                 по ул. Берковецкой, 4Д.
             </p>
