discount page working

--- a/src/html/discountsSingle.html
+++ b/src/html/discountsSingle.html
@@ -14,7 +14,8 @@
                 class="flex before:w-[6px] before:rounded-sm before:h-[6px] before:bg-white before:mr-[10px] opacity-60 items-center">
                 <span class="text-white text-sm">5 апреля 2024</span>
             </div>
-            <h1 class="btn-primary text-white text-[30px] font-bold break-words mt-4 leading-9 md:leading-tight md:max-w-[876px] md:text-[65px]">
+            <h1
+                class="btn-primary text-white text-[30px] font-bold break-words mt-4 leading-9 md:leading-tight md:max-w-[876px] md:text-[65px]">
                 Программы «еОселя» и «еВосстановление» заработали для LUCKY LAND
             </h1>
             <a href="#"
@@ -31,7 +32,7 @@
                 недавно получил официальный адрес.
             </p>
             <blockquote class="text-white text-base md:text-xl mt-7 md:pl-9 relative">
-                <div class="md:absolute md:left-0 md:before:w-[1px] md:before:h-10 before:h-[1px] before:w-10 before:bg-blue-400 before:mr-3 before:block md:after:h-10 md:after:w-[1px] after:h-[1px] after:w-10 after:bg-blue-400 after:ml-3 md:after:ml-0 md:before:mb-3 md:after:mt-3 md:before:mr-0 after:block flex md:flex-col items-center mb-4">
+                <div class="blockquote-lines">
                     <img src="./../img/icons/quotes.svg" alt="Quotes">
                 </div>
                 «Сегодня мы получаем все больше запросов на покупку недвижимости по государственным программам. Поэтому
