--- a/src/html/newsSingle.html
+++ b/src/html/newsSingle.html
@@ -31,7 +31,7 @@
                 недавно получил официальный адрес.
             </p>
             <blockquote class="text-white text-base md:text-xl mt-7 md:pl-9 relative">
-                <div class="md:absolute md:left-0 md:before:w-[1px] md:before:h-10 before:h-[1px] before:w-10 before:bg-blue-400 before:mr-3 before:block md:after:h-10 md:after:w-[1px] after:h-[1px] after:w-10 after:bg-blue-400 after:ml-3 md:after:ml-0 md:before:mb-3 md:after:mt-3 md:before:mr-0 after:block flex md:flex-col items-center mb-4">
+                <div class="blockquote-lines">
                     <img src="./../img/icons/quotes.svg" alt="Quotes">
                 </div>
                 «Сегодня мы получаем все больше запросов на покупку недвижимости по государственным программам. Поэтому
