--- a/src/html/blocks/header.html
+++ b/src/html/blocks/header.html
@@ -13,6 +13,8 @@
 </head>
 
 <body>
-	<header>
-		HEADER
+	<header class="bg-blue-500">
+		<div class="container">
+			<img src="../../img/icons/logo-mob.svg" alt="logo ic">
+		</div>
 	</header>
