--- a/src/html/blocks/header.html
+++ b/src/html/blocks/header.html
@@ -13,8 +13,13 @@
 </head>
 
 <body>
-	<header class="bg-blue-500">
+	<header class="bg-blue-500 py-4">
 		<div class="container">
-			<img src="../../img/icons/logo-mob.svg" alt="logo ic">
+			<div class="header__inner flex items-center justify-between">
+				<a href="../index.html">
+					<img src="../../img/icons/logo-mob.svg" alt="logo ic">
+				</a>
+				<button type="button"><img src="../../img/icons/burder.svg" alt="burger ic"></button>
+			</div>
 		</div>
 	</header>
