--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,5 +1,24 @@
 @@include('blocks/header.html')
 
-
+<section class="mt-24 block">
+    <!-- <img class="absolute top-0 z-0 w-full object-cover" src="../img/index/banner-bgd.jpg" alt="bgd ph"> -->
+    <!-- <div class="bg-gradient-to-t from-blue-500 from-80% w-full h-full absolute z-10 top-0 left-0"></div> -->
+    <div class="container relative z-10 pt-24">
+        <div class="banner__inner">
+            <div class="banner__item">
+                <div class="banner__item__head">
+                    <div class="banner__item__title">
+                        <h2>
+                            AVALON
+                        </h2>
+                        <span>
+                            БАЛИ
+                        </span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
 @@include('blocks/footer.html')
