--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,17 +1,19 @@
 @@include('blocks/header.html')
 
-<section class="mt-24 block">
-    <!-- <img class="absolute top-0 z-0 w-full object-cover" src="../img/index/banner-bgd.jpg" alt="bgd ph"> -->
-    <!-- <div class="bg-gradient-to-t from-blue-500 from-80% w-full h-full absolute z-10 top-0 left-0"></div> -->
-    <div class="container relative z-10 pt-24">
+<section class="pb-20 pt-40 relative overflow-hidden">
+    <div class="bg-[url('../img/index/banner-bgd.jpg')] absolute top-0 left-0 w-full h-screen z-10 opacity-70">
+        <div class="bg-gradient-to-t from-blue-500 absolute top-0 left-0 w-full h-full"></div>
+    </div>
+    <!-- <img src="../img/index/banner-bgd.jpg" alt=""> -->
+    <div class="container relative z-10">
         <div class="banner__inner">
             <div class="banner__item">
                 <div class="banner__item__head">
-                    <div class="banner__item__title">
-                        <h2>
+                    <div class="flex">
+                        <h2 class="text-white text-[45px] md:text-[75px]">
                             AVALON
                         </h2>
-                        <span>
+                        <span class="text-white bg-blue-400 h-8 text-center flex items-center px-2 rounded-xl">
                             БАЛИ
                         </span>
                     </div>
@@ -20,5 +22,6 @@
         </div>
     </div>
 </section>
+
 
 @@include('blocks/footer.html')
