--- a/src/html/blocks/header.html
+++ b/src/html/blocks/header.html
@@ -8,6 +8,7 @@
 	<title>Avalon</title>
 
 	<link rel="stylesheet" href="./css/main.css">
+	<!-- <link rel="stylesheet" href="./files/swiper/swiper.min.css" /> -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 
 </head>
