--- a/src/html/blocks/footer.html
+++ b/src/html/blocks/footer.html
@@ -4,6 +4,7 @@
 	</div>
 </footer>
 
+<!-- <script src="./../../files/swiper/swiper.min.js"></script> -->
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 <script src="./../../js/index.js"></script>
 </body>
