--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,7 +1,7 @@
 @@include('blocks/header.html')
 
 <section class="pb-20 pt-40 relative overflow-hidden">
-    <div class="bg-[url('../img/index/banner-bgd.jpg')] absolute top-0 left-0 w-full h-screen z-10 opacity-70">
+    <div class="bg-[url('../img/index/banner-bgd.jpg')] absolute top-0 left-0 w-full h-screen z-10 opacity-50">
         <div class="bg-gradient-to-t from-blue-500 absolute top-0 left-0 w-full h-full"></div>
     </div>
     <!-- <img src="../img/index/banner-bgd.jpg" alt=""> -->
@@ -10,14 +10,33 @@
             <div class="banner__item">
                 <div class="banner__item__head">
                     <div class="flex">
-                        <h2 class="text-white text-[45px] md:text-[75px]">
+                        <h1 class="text-white text-[45px] md:text-[75px] mr-3">
                             AVALON
-                        </h2>
-                        <span class="text-white bg-blue-400 h-8 text-center flex items-center px-2 rounded-xl">
+                        </h1>
+                        <span class="text-white bg-blue-400 h-6 text-center flex items-center px-2  rounded-xl text-sm md:h-8 md:px-3">
                             БАЛИ
                         </span>
                     </div>
                 </div>
+                <div class="relative px-5 py-3 w-fit">
+                    <img class="absolute top-0 left-0 -z-10" src="../img/index/bgd-decor.png" alt="bgd">
+                    <h2 class="text-sm text-white">
+                        Стоимость <span class="font-bold">от $70.000</span>
+                    </h2>
+                    <p class="text-xs text-slate-50 opacity-60 text-center">
+                        *включая налоги
+
+                    </p>
+                </div>
+                <h2 class="text-3xl text-white mt-5">
+                    Современные апартаменты <br class="md: flex-none"> 
+                    <span class="font-bold">
+                        для жизни <br class="md: flex-none"> и инвестиций
+                    </span>
+                </h2>
+                <a href="#" class="w-full max-w-56 px-5 py-4 block text-sm bg-white rounded-xl text-center font-bold whitespace-nowrap text-blue-500 hover:text-white hover:bg-blue-400 my-10 transition-all">
+                    Скачать презентацию
+                </a>
             </div>
         </div>
     </div>
