--- a/src/html/blocks/header.html
+++ b/src/html/blocks/header.html
@@ -7,6 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>Avalon</title>
 
+	<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 	<link rel="stylesheet" href="./css/main.css">
 	<!-- <link rel="stylesheet" href="./files/swiper/swiper.min.css" /> -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
