--- a/src/html/articles.html
+++ b/src/html/articles.html
@@ -1,9 +1,9 @@
 @@include('blocks/header.html')
 
 <section class="pb-24 relative bg-blue-500 overflow-hidden">
-    <div class="bg-gradient-to-t from-blue-500 from-80% lg:from-80%  w-full h-full absolute z-10"></div>
+    <div class="bg-gradient-to-t from-blue-500 from-70% lg:from-70%  w-full h-[2000px] absolute z-10"></div>
 
-    <img class="absolute top-0 z-0 opacity-40 w-[600vw] max-w-max md:w-full" src="./../img/news/news-bgd.jpg"
+    <img class="absolute top-0 z-0 opacity-40 w-[600vw] max-w-max md:w-full min-h-[1000px] h-screen object-cover" src="./../img/news/news-bgd.jpg"
         alt="Image">
 
     <div class="container mx-auto relative z-20 pt-32 md:pt-64">
@@ -25,7 +25,7 @@
             @@include('blocks/articles/articlesItem.html')
             @@include('blocks/articles/articlesItem.html')
         </div>
-        <button class="text-white h-[60px] rounded-[10px] border-white border-[1px] px-7 mx-auto cursor-pointer block mt-12">
+        <button class="white-border-button">
             Показать больше
         </button>
     </div>
