Fix discount page

--- a/src/html/discounts.html
+++ b/src/html/discounts.html
@@ -50,7 +50,7 @@
                 </ul>
             </div>
         </div>
-        <div class="md:grid-cols-2 lg:grid-cols-3 grid grid-cols-1 gap-x-5 gap-y-10 mt-12">
+        <div class="md:grid-cols-2 lg:grid-cols-3 grid grid-cols-1 gap-x-5 gap-y-5 mt-12">
             @@include('blocks/discounts/discountsItem.html')
             @@include('blocks/discounts/discountsItem.html')
             @@include('blocks/discounts/discountsItem.html')
@@ -58,7 +58,7 @@
             @@include('blocks/discounts/discountsItem.html')
             @@include('blocks/discounts/discountsItem.html')
         </div>
-        <button class="text-white h-[60px] rounded-[10px] border-white border-[1px] px-7 cursor-pointer mx-auto block mt-12">
+        <button class="white-border-button">
             Показать больше
         </button>
     </div>
