--- a/src/html/blocks/header.html
+++ b/src/html/blocks/header.html
@@ -15,20 +15,22 @@
 </head>
 
 <body>
+
 	<header class="bg-blue-500 py-4 fixed top-0 left-0 w-full border-b border-b-whiteOp-300 z-30">
 		<div class="container">
 			<div class="header__inner flex items-center justify-between relative">
 				<a href="../index.html">
 					<img src="../../img/icons/logo-mob.svg" alt="logo ic">
 				</a>
-				<button type="button"><img src="../../img/icons/burder.svg" alt="burger ic"></button>
-				<!-- <div class="burger__body absolute top-12 left-0 bg-blue-500 w-[calc(100%_+_60px)] -ml-[30px] flex-col flex text-center pt-12 pb-8 text-white text-lg">
-
+				<button id="burgerBtn" type="button" class="xl:hidden">
+					<img src="../../img/icons/burder.svg" alt="burger ic">
+				</button>
+				<div id="burgerMenu" class="burger__body hidden absolute top-[47px] left-0 bg-blue-500 w-[calc(100%_+_60px)] -ml-[30px] flex-col flex text-center pt-12 pb-8 text-white text-lg">
 					<div class="burger__proj mb-8">
-						<p class="hover:text-blue-400 transition-all cursor-pointer">
+						<p id="toggleProjects" class="hover:text-blue-400 transition-all cursor-pointer">
 							Проекты
 						</p>
-						<div class="burger__proj_body mt-8 flex flex-col">
+						<div id="projectsBody" class="burger__proj_body mt-8 flex flex-col hidden">
 							<a href="#" class="mb-8 hover:text-blue-400 transition-all">
 								BUDDHA | Club House
 							</a>
@@ -55,7 +57,55 @@
 					<a href="#" class=" hover:text-blue-400 transition-all">
 						Контакты
 					</a>
-				</div> -->
+					<div class="mt-12 pt-7 border-t border-whiteOp-300 flex flex-col gap-4">
+						<a href="tel:+6281246502783" class="hover:text-blue-400 transition-all font-bold text-white text-base">+62 (812) 4650-27-83</a>
+	
+						<button type="button" class="py-4 w-full text-white text-xs font-bold max-w-56 m-auto border border-white rounded-xl transition-all hover:bg-white hover:text-blue-400">
+							Запланировать встречу
+						</button>
+					</div>
+					<div class="mt-12 pt-7 border-t border-whiteOp-300 flex gap-11 justify-center">
+						<ul class="flex items-center gap-4">
+							<li >
+								<a href="#" class="hover:text-blue-400 transition-all text-white text-base">
+									EN
+								</a>
+							</li>
+							<li >
+								<a href="#" class="hover:text-blue-400 transition-all text-white text-base">
+									UA
+								</a>
+							</li>
+							<li >
+								<a href="#" class="hover:text-blue-400 transition-all text-white text-base">
+									RU
+								</a>
+							</li>
+						</ul>
+						<ul class="flex items-center gap-1">
+							<li>
+								<a href="#">
+									<img src="../../img/index/tw-burger.svg" alt="ic">
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<img src="../../img/index/inst-burger.svg" alt="ic">
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<img src="../../img/index/face-burger.svg" alt="ic">
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<img src="../../img/index/yout-burger.svg" alt="ic">
+								</a>
+							</li>
+						</ul>
+					</div>
+				</div>				
 			</div>
 		</div>
 	</header>
