--- a/src/html/about.html
+++ b/src/html/about.html
@@ -110,11 +110,32 @@
     </div>
 </section>
 
-<section class="changy">
+<section class="bg-[url('../img/about/bgd-sec-changy.jpg')] bg-no-repeat bg-cover">
     <div class="container">
-        <div class="">
-
+        <div class="bg-[url('../img/about/changy-bgd.png')] bg-no-repeat bg-cover">
+            <h2>
+                Чангу
+            </h2>
+            <strong>
+                Лучшее место <br>
+                <span>
+                    для инвестиций на Бали
+                </span>
+            </strong>
+            <p>
+                В 2019 году Forbes поставил Чангу на 41-е место в ТОп-местах на планете для жизни и инвестирования.
+            </p>
         </div>
+    </div>
+</section>
+
+<section class="map">
+    <div class="container">
+        <h2>
+            Топовая локация
+        </h2>
+
+        
     </div>
 </section>
 
