--- a/src/html/about.html
+++ b/src/html/about.html
@@ -129,13 +129,15 @@
     </div>
 </section>
 
-<section class="map">
+<section class="map py-14 md:py-24">
     <div class="container">
-        <h2>
+        <h2 class="font-bold text-white text-3xl text-center mb-8">
             Топовая локация
         </h2>
 
-        
+        <div>
+            
+        </div>
     </div>
 </section>
 
