--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,7 +1,7 @@
 @@include('blocks/header.html')
 
-<section class="pb-12">
-    <div class="swiper swiper-banner">
+<section class="pb-12 ">
+    <div class="swiper swiper-banner relative">
         <div class="swiper-wrapper">
 
             <div class="swiper-slide pt-40 relative overflow-hidden">
@@ -9,7 +9,7 @@
                     <div class="flex items-center justify-between">
                         <div class="">
                             <div
-                                class="bg-[url('../img/index/slide-bgd-1.jpg')] brightness-[0.4] bg-center absolute top-0 left-0 w-full h-[1000px] -z-10 opacity-50">
+                                class="bg-[url('../img/index/slide-bgd-1.jpg')] brightness-[0.4] bg-center absolute top-0 left-0 w-full h-[100%] -z-10 opacity-50">
                             </div>
                             <div
                                 class="bg-gradient-to-t from-blue-500 from-10% w-full h-52 absolute -z-10 bottom-0 left-0">
@@ -29,12 +29,12 @@
                                 </div>
                                 <div class="con md:ml-10 md:pl-5 md:border-l md:border-whiteOp-300 md:px-7">
                                     <div class="relative px-5 py-3 w-fit md:text-center">
-                                        <img class="absolute top-0 left-0 -z-10 md:hidden"
+                                        <img class="absolute top-0 left-0 -z-10 md:hidden h-full"
                                             src="../img/index/bgd-decor.png" alt="bgd">
-                                        <img class="absolute top-0 left-0 -z-10 hidden md:block h-[-webkit-fill-available]"
+                                        <img class="absolute top-0 left-0 -z-10 hidden md:block h-[-webkit-fill-available] h-full"
                                             src="../img/index/bgd-decor-2.png" alt="bgd">
                                         <h2 class="text-sm text-white">
-                                            Стоимость <br class="hidden md:block"> <span class="font-bold md:text-xl">от
+                                            Стоимость <br class="hidden md:block"> <span class="whitespace-nowrap font-bold md:text-xl">от
                                                 $70.000</span>
                                         </h2>
                                         <p class="text-xs text-slate-50 opacity-60 text-center">
@@ -82,7 +82,7 @@
 
             <div class="swiper-slide pb-10 pt-36 relative overflow-hidden">
                 <div
-                    class="bg-[url('../img/index/slide-bgd-2.jpg')] bg-center absolute top-0 left-0 w-full h-screen -z-10 opacity-50">
+                    class="bg-[url('../img/index/slide-bgd-2.jpg')] bg-center absolute top-0 left-0 w-full h-[100%] -z-10 opacity-50">
                 </div>
                 <div class="bg-gradient-to-t from-blue-500 from-30% w-full h-52 absolute -z-10 bottom-0 left-0"></div>
                 <div class="bg-gradient-to-t from-blue-500 from-30% w-full h-52 absolute -z-10 top-0 left-0 rotate-180">
@@ -129,7 +129,7 @@
                     <div class="flex items-center justify-between">
                         <div class="">
                             <div
-                                class="bg-[url('../img/index/slide-bgd-1.jpg')] brightness-[0.4] bg-center absolute top-0 left-0 w-full h-[1000px] -z-10 opacity-50">
+                                class="bg-[url('../img/index/slide-bgd-1.jpg')] brightness-[0.4] bg-center absolute top-0 left-0 w-full h-[100%] -z-10 opacity-50">
                             </div>
                             <div
                                 class="bg-gradient-to-t from-blue-500 from-10% w-full h-52 absolute -z-10 bottom-0 left-0">
@@ -202,7 +202,13 @@
 
         </div>
         <div class="swiper-pagination"></div>
+        <button type="button" class="hidden lg:flex items-center gap-2 py-5 px-10px w-full bg-blue-400 rounded-xl max-w-[260px] text-white text-sm font-bold justify-center transition-all hover:bg-blue-600 absolute bottom-[165px] right-[60px] z-10 ">
+            <img src="../img/index/head-whatss.svg" class="max-w-[15px]" alt="ic">
+            Cвязаться в WhatsApp
+        </button>
     </div>
+
+    
 </section>
 
 <section class="uslugi pt-5 pb-12">
@@ -1217,7 +1223,7 @@
             <div class="swiper else-news">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                        <a href="discountsSingle.html" class="group relative rounded-2xl overflow-hidden">
+                        <a href="discountsSingle.html" class="group block relative rounded-2xl transition-all">
                             <div class="block-bottom-point z-20 border-white bg-white after:bg-blue-500"></div>
                             <img src="./../../../img/news/cardImage.jpg" alt="Image" class="z-0 relative rounded-2xl">
                             <div
@@ -1239,7 +1245,7 @@
                         </a>
                     </div>
                     <div class="swiper-slide">
-                        <a href="discountsSingle.html" class="group relative rounded-2xl overflow-hidden">
+                        <a href="discountsSingle.html" class="group block relative rounded-2xl">
                             <div class="block-bottom-point z-20 border-white bg-white after:bg-blue-500"></div>
                             <img src="./../../../img/news/cardImage.jpg" alt="Image" class="z-0 relative rounded-2xl">
                             <div
@@ -1261,7 +1267,7 @@
                         </a>
                     </div>
                     <div class="swiper-slide">
-                        <a href="discountsSingle.html" class="group relative rounded-2xl overflow-hidden">
+                        <a href="discountsSingle.html" class="group block relative rounded-2xl">
                             <div class="block-bottom-point z-20 border-white bg-white after:bg-blue-500"></div>
                             <img src="./../../../img/news/cardImage.jpg" alt="Image" class="z-0 relative rounded-2xl">
                             <div
@@ -1283,7 +1289,7 @@
                         </a>
                     </div>
                     <div class="swiper-slide">
-                        <a href="discountsSingle.html" class="group relative rounded-2xl overflow-hidden">
+                        <a href="discountsSingle.html" class="group block relative rounded-2xl">
                             <div class="block-bottom-point z-20 border-white bg-white after:bg-blue-500"></div>
                             <img src="./../../../img/news/cardImage.jpg" alt="Image" class="z-0 relative rounded-2xl">
                             <div
@@ -1340,7 +1346,7 @@
             <div class="swiper else-news">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                        <a href="newsSingle.html" class="w-full h-full group">
+                        <a href="newsSingle.html" class="w-full h-full block group">
                             <div class="relative mb-5 w-full">
                                 <div class="block-bottom-point border-white bg-white after:bg-blue-500"></div>
                                 <img class="rounded-[20px] w-full h-full object-cover"
@@ -1357,7 +1363,7 @@
                         </a>
                     </div>
                     <div class="swiper-slide">
-                        <a href="newsSingle.html" class="w-full h-full group">
+                        <a href="newsSingle.html" class="w-full h-full block group">
                             <div class="relative mb-5 w-full">
                                 <div class="block-bottom-point border-white bg-white after:bg-blue-500"></div>
                                 <img class="rounded-[20px] w-full h-full object-cover"
@@ -1374,7 +1380,7 @@
                         </a>
                     </div>
                     <div class="swiper-slide">
-                        <a href="newsSingle.html" class="w-full h-full group">
+                        <a href="newsSingle.html" class="w-full h-full block group">
                             <div class="relative mb-5 w-full">
                                 <div class="block-bottom-point border-white bg-white after:bg-blue-500"></div>
                                 <img class="rounded-[20px] w-full h-full object-cover"
@@ -1391,7 +1397,7 @@
                         </a>
                     </div>
                     <div class="swiper-slide">
-                        <a href="newsSingle.html" class="w-full h-full group">
+                        <a href="newsSingle.html" class="w-full h-full block group">
                             <div class="relative mb-5 w-full">
                                 <div class="block-bottom-point border-white bg-white after:bg-blue-500"></div>
                                 <img class="rounded-[20px] w-full h-full object-cover"
@@ -1408,7 +1414,7 @@
                         </a>
                     </div>
                     <div class="swiper-slide">
-                        <a href="newsSingle.html" class="w-full h-full group">
+                        <a href="newsSingle.html" class="w-full h-full block group">
                             <div class="relative mb-5 w-full">
                                 <div class="block-bottom-point border-white bg-white after:bg-blue-500"></div>
                                 <img class="rounded-[20px] w-full h-full object-cover"
@@ -1460,7 +1466,7 @@
             <div class="swiper else-articles">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                        <a href="newsSingle.html" class="w-full h-full group lg:max-w-[375px]">
+                        <a href="newsSingle.html" class="w-full h-full block group lg:max-w-[375px]">
                             <div class="relative mb-5 w-full">
                                 <div class="block-bottom-point border-white bg-white after:bg-blue-500"></div>
                                 <img class="rounded-[20px] w-full h-full object-cover"
@@ -1478,7 +1484,7 @@
                         </a>
                     </div>
                     <div class="swiper-slide">
-                        <a href="newsSingle.html" class="w-full h-full group lg:max-w-[375px]">
+                        <a href="newsSingle.html" class="w-full h-full block group lg:max-w-[375px]">
                             <div class="relative mb-5 w-full">
                                 <div class="block-bottom-point border-white bg-white after:bg-blue-500"></div>
                                 <img class="rounded-[20px] w-full h-full object-cover"
@@ -1496,7 +1502,7 @@
                         </a>
                     </div>
                     <div class="swiper-slide">
-                        <a href="newsSingle.html" class="w-full h-full group lg:max-w-[375px]">
+                        <a href="newsSingle.html" class="w-full h-full block group lg:max-w-[375px]">
                             <div class="relative mb-5 w-full">
                                 <div class="block-bottom-point border-white bg-white after:bg-blue-500"></div>
                                 <img class="rounded-[20px] w-full h-full object-cover"
@@ -1514,7 +1520,7 @@
                         </a>
                     </div>
                     <div class="swiper-slide">
-                        <a href="newsSingle.html" class="w-full h-full group lg:max-w-[375px]">
+                        <a href="newsSingle.html" class="w-full h-full block group lg:max-w-[375px]">
                             <div class="relative mb-5 w-full">
                                 <div class="block-bottom-point border-white bg-white after:bg-blue-500"></div>
                                 <img class="rounded-[20px] w-full h-full object-cover"
@@ -1532,7 +1538,7 @@
                         </a>
                     </div>
                     <div class="swiper-slide">
-                        <a href="newsSingle.html" class="w-full h-full group lg:max-w-[375px]">
+                        <a href="newsSingle.html" class="w-full h-full block group lg:max-w-[375px]">
                             <div class="relative mb-5 w-full">
                                 <div class="block-bottom-point border-white bg-white after:bg-blue-500"></div>
                                 <img class="rounded-[20px] w-full h-full object-cover"
@@ -1550,7 +1556,7 @@
                         </a>
                     </div>
                     <div class="swiper-slide">
-                        <a href="newsSingle.html" class="w-full h-full group lg:max-w-[375px]">
+                        <a href="newsSingle.html" class="w-full h-full block group lg:max-w-[375px]">
                             <div class="relative mb-5 w-full">
                                 <div class="block-bottom-point border-white bg-white after:bg-blue-500"></div>
                                 <img class="rounded-[20px] w-full h-full object-cover"
@@ -1568,7 +1574,7 @@
                         </a>
                     </div>
                     <div class="swiper-slide">
-                        <a href="newsSingle.html" class="w-full h-full group lg:max-w-[375px]">
+                        <a href="newsSingle.html" class="w-full h-full block group lg:max-w-[375px]">
                             <div class="relative mb-5 w-full">
                                 <div class="block-bottom-point border-blue-600 bg-blue-600 after:bg-blue-500"></div>
                                 <img class="rounded-[20px] w-full h-full object-cover"
