--- a/src/html/index.html
+++ b/src/html/index.html
@@ -586,7 +586,7 @@
 <section class="bali py-14 md:py-24 bg-blue-600">
     <div class="container">
         <div class="bali_con grid grid-cols-2 gap-x-2 gap-y-7 lg:grid-cols-3 lg:gap-y-12 lg:gap-x-5">
-            <h2 class="font-bold text-white text-3xl md:text-[56px] md:mb-8 col-start-1 col-end-3 lg:col-end-1">
+            <h2 class="font-bold text-white text-3xl md:text-[56px] md:leading-[50px] md:mb-8 col-start-1 col-end-3 lg:col-end-1">
                 Бали в цифрах
             </h2>
             <!-- <div class="grid grid-cols-2 gap-x-2 gap-y-7"> -->
@@ -738,8 +738,7 @@
 
 <section class="bg-[url('../img/index/buy-bgd.jpg')] bg-no-repeat bg-cover pt-14 pb-32">
     <div class="container">
-        <div
-            class="bg-[url('../img/index/buy-list-bg.png')] lg:bg-[url('../img/index/buy-bg-desk.png')] bg-no-repeat bg-cover lg:bg-cover pt-14 pb-28 px-5 relative md:pb-40 md:px-8 lg:pt-[100px] lg:px-[120px] lg:pb-[50px]">
+        <div class="bg-[url('../img/index/buy-list-bg.png')] lg:bg-[url('../img/index/buy-bg-desk.png')] bg-no-repeat bg-cover lg:bg-contain pt-14 pb-28 px-5 relative md:pb-40 md:px-8 lg:pt-5 lg:px-[120px] lg:pb-[50px]">
             <div class="mb-7 lg:flex lg:items-center lg:mb-[50px]">
                 <h2
                     class="font-bold text-white text-3xl mb-7 md:text-[56px] md:leading-[56px] md:text-center lg:text-left lg:m-0">
@@ -749,6 +748,10 @@
                     Для того, чтобы приобрести недвижимость, вам не обязательно прилетать на Бали, многие сделки теперь
                     происходят дистанционно
                 </p>
+                <div class="after:block after:w-[130px] after:h-[1px] after:bg-whiteOp-300 relative after:absolute after:left-[2px] after:top-[50%] after:translate-y-[-50%] ">
+                    <div class="min-w-[10px] h-[10px] bg-blue-400 rounded-md relative z-10">
+                    </div>
+                </div>
             </div>
 
             <div class="relative">
