--- a/src/html/blocks/footer.html
+++ b/src/html/blocks/footer.html
@@ -2,11 +2,11 @@
 	<div class="container">
 
 		<div class="md:flex md:items-center gap-5 justify-between md:mb-24" >
-			<img src="../../img/index/a-footer.png" class="max-w-[379px] hidden lg:block" alt="ph">			
+			<img src="./img/index/a-footer.png" class="max-w-[379px] hidden lg:block" alt="ph">			
 			<div>
 				<div class="mb-10">
 					<a href="tel:+6281246502783" class="flex items-center gap-4 mb-7">
-						<img src="../../img/index/whatsap.svg" alt="ic">
+						<img src="./img/index/whatsap.svg" alt="ic">
 						<div>
 							<span class="text-whiteOp-400 text-sm">
 								WhatsApp 24/7 online
@@ -17,7 +17,7 @@
 						</div>
 					</a>
 					<a href="mailto:mail@avalonbali.com" class="flex items-center gap-4">
-						<img src="../../img/index/whatsap.svg" alt="ic">
+						<img src="./img/index/whatsap.svg" alt="ic">
 						<div>
 							<span class="text-whiteOp-400 text-sm">
 								Email us
@@ -31,29 +31,29 @@
 				<ul class="flex gap-[5px] mb-5">
 					<li>
 						<a href="#">
-							<img src="../../img/index/whatsap-link.svg" alt="ic">
+							<img src="./img/index/whatsap-link.svg" alt="ic">
 						</a>
 					</li>
 					<li>
 						<a href="#">
-							<img src="../../img/index/instagram.svg" alt="ic">
+							<img src="./img/index/instagram.svg" alt="ic">
 						</a>
 					</li>
 					<li>
 						<a href="#">
-							<img src="../../img/index/facebook.svg" alt="ic">
+							<img src="./img/index/facebook.svg" alt="ic">
 						</a>
 					</li>
 					<li>
 						<a href="#">
-							<img src="../../img/index/youtube.svg" alt="ic">
+							<img src="./img/index/youtube.svg" alt="ic">
 						</a>
 					</li>
 				</ul>
 			</div>
 
 			<form action="" class="flex flex-col p-5 border border-whiteOp-300 rounded-2xl text-center md:p-12 relative mb-14 md:mb-0">
-				<img src="../img/index/dot-decor-2.png" class="absolute right-[-1px] bottom-[-1px] w-5 md:w-8" alt="decor">
+				<img src="./img/index/dot-decor-2.png" class="absolute right-[-1px] bottom-[-1px] w-5 md:w-8" alt="decor">
 				<h2 class="font-bold text-white text-2xl mb-4 md:text-3xl md:mb-7">
 					Хотите узнать больше?
 				</h2>
@@ -71,7 +71,7 @@
 	<div class="bg-blue-500 py-7 md:py-2">
 		<div class="container">
 			<div class="flex items-center justify-between gap-8">
-				<img src="../../img/index/a-footer.png" class="max-w-[96px] md:hidden" alt="ph">
+				<img src="./img/index/a-footer.png" class="max-w-[96px] md:hidden" alt="ph">
 				<ul class="md:flex md:items-center md:gap-4 md:justify-center md:w-full">
 					<li class="text-whiteOp-400 text-xs mb-2">
 						<p >
