--- a/src/html/career.html
+++ b/src/html/career.html
@@ -3,7 +3,7 @@
 <section class="pb-24 relative bg-blue-500 overflow-hidden">
     <div class="bg-gradient-to-t from-blue-500 from-60% lg:from-60%  w-full h-[2000px] absolute z-10"></div>
 
-    <img class="absolute top-0 z-0 opacity-40 w-[600vw] max-w-max md:w-full min-h-[1000px] h-screen object-cover" src="./../img/career/img.jpg"
+    <img class="absolute top-0 z-0 opacity-40 w-[600vw] max-w-max md:w-full min-h-[1000px] h-screen object-cover" src="./img/career/img.jpg"
         alt="Image">
 
     <div class="container mx-auto relative z-20 pt-32 md:pt-64">
@@ -42,8 +42,8 @@
                 </div>
                 <div
                     class="flex items-center transition-all justify-center rounded-[10px] w-11 h-11 min-w-11 group-[.active]:bg-blue-400 bg-blue-700">
-                    <img class="group-[.active]:block hidden" src="./../img/icons/minus-white.svg" alt="">
-                    <img class="group-[.active]:hidden block" src="./../img/icons/plus-white.svg" alt="">
+                    <img class="group-[.active]:block hidden" src="./img/icons/minus-white.svg" alt="">
+                    <img class="group-[.active]:hidden block" src="./img/icons/plus-white.svg" alt="">
                 </div>
             </div>
             <div
@@ -102,8 +102,8 @@
                 </div>
                 <div
                     class="flex items-center transition-all justify-center rounded-[10px] w-11 h-11 min-w-11 group-[.active]:bg-blue-400 bg-blue-700">
-                    <img class="group-[.active]:block hidden" src="./../img/icons/minus-white.svg" alt="">
-                    <img class="group-[.active]:hidden block" src="./../img/icons/plus-white.svg" alt="">
+                    <img class="group-[.active]:block hidden" src="./img/icons/minus-white.svg" alt="">
+                    <img class="group-[.active]:hidden block" src="./img/icons/plus-white.svg" alt="">
                 </div>
             </div>
             <div
@@ -157,7 +157,7 @@
     </div>
 
     <div class="absolute -right-[72px] top-[250px] w-36 z-10">
-        <img src="./../img/icons/vector-logo.svg" alt="vector-logo">
+        <img src="./img/icons/vector-logo.svg" alt="vector-logo">
     </div>
 </section>
 
