--- a/src/html/discountsSingle.html
+++ b/src/html/discountsSingle.html
@@ -5,7 +5,7 @@
         <div class="bg-gradient-to-t from-blue-500 absolute top-0 left-0 w-full h-full"></div>
     </div>
     <div class="absolute -right-36 bottom-36 w-72 h-72 z-10">
-        <img src="./../img/icons/vector-logo.svg" alt="vector-logo">
+        <img src="./img/icons/vector-logo.svg" alt="vector-logo">
     </div>
     <div class="container relative z-10">
 
@@ -13,7 +13,7 @@
 
             <div class="flex before:rounded-sm items-center">
                 <span
-                class="md:px-5 py-2 px-4 bg-[url('./../img/icons/bgd-blue-dor-rd.svg')] bg-no-repeat bg-right-bottom h-fit rounded-tl-xl rounded-bl-xl rounded-tr-xl overflow-hidden text-xs md:text-sm text-white">
+                class="md:px-5 py-2 px-4 bg-[url('./img/icons/bgd-blue-dor-rd.svg')] bg-no-repeat bg-right-bottom h-fit rounded-tl-xl rounded-bl-xl rounded-tr-xl overflow-hidden text-xs md:text-sm text-white">
                     Действует до 30 марта 2024
                 </span>
             </div>
@@ -41,7 +41,7 @@
                     </p>
                     <blockquote class="text-white text-base md:text-xl mt-7 md:pl-9 relative">
                         <div class="blockquote-lines">
-                            <img src="./../img/icons/quotes.svg" alt="Quotes">
+                            <img src="./img/icons/quotes.svg" alt="Quotes">
                         </div>
                         «Сегодня мы получаем все больше запросов на покупку недвижимости по государственным
                         программам.
@@ -79,16 +79,16 @@
                     <p class="text-base md:text-xl text-white opacity-40 mb-4 md:mb-7">Проекты участвующие в акции</p>
 
                     <div class="h-[500px] md:h-[600px] relative rounded-3xl overflow-hidden bg-[#111111] rounded-br-none">
-                        <img src="./../img/discounts/image.jpg" class="opacity-50" alt="">
+                        <img src="./img/discounts/image.jpg" class="opacity-50" alt="">
                         <div class="bg-gradient-to-t from-blue-600 absolute bottom-0 left-0 w-full h-3/4"></div>
 
                         <div class="absolute top-0 left-0 w-full h-full p-5 md:p-7 flex flex-col">
                             <div class="block-bottom-point"></div>
 
                             <div class="flex justify-between mb-auto">
-                                <img class="w-[90px]" src="./../img/icons/icon-club.svg" alt="">
+                                <img class="w-[90px]" src="./img/icons/icon-club.svg" alt="">
                                 <span
-                                    class="md:px-5 py-2 px-4 bg-[url('./../img/icons/bgd-blue-dor-rd.svg')] bg-no-repeat bg-right-bottom h-fit rounded-tl-xl rounded-bl-xl rounded-tr-xl overflow-hidden text-xs md:text-sm text-white">
+                                    class="md:px-5 py-2 px-4 bg-[url('./img/icons/bgd-blue-dor-rd.svg')] bg-no-repeat bg-right-bottom h-fit rounded-tl-xl rounded-bl-xl rounded-tr-xl overflow-hidden text-xs md:text-sm text-white">
                                     80% Продано
                                 </span>
                             </div>
@@ -112,7 +112,7 @@
                                         Подробнее
                                     </button>
                                     <div class="flex items-center">
-                                        <img class="w-3" src="./../img/icons/point-white.svg" alt="">
+                                        <img class="w-3" src="./img/icons/point-white.svg" alt="">
                                         <span class="ml-1 text-sm text-white">Чангу</span>
                                     </div>
                                 </div>
