--- a/src/html/newsSingle.html
+++ b/src/html/newsSingle.html
@@ -6,7 +6,7 @@
     </div>
     <div class="container relative z-10">
         <div class="absolute right-0 bottom-56 w-72 h-72 z-10">
-            <img src="./../img/icons/vector-logo.svg" alt="vector-logo">
+            <img src="./img/icons/vector-logo.svg" alt="vector-logo">
         </div>
 
         <div class="pb-14 text-content">
@@ -19,7 +19,7 @@
             </h1>
             <a href="#"
                 class="rounded-full border-[1px] border-white w-10 h-10 flex items-center justify-center mt-8 mb-14 md:w-14 md:h-14">
-                <img src="./../img/icons/socials.svg" class="md:w-6" alt="Soc">
+                <img src="./img/icons/socials.svg" class="md:w-6" alt="Soc">
             </a>
             <b class="text-white text-base md:text-xl mb-2 block">
                 Квартиры в эко-городе LUCKY LAND от строительной компании DIM теперь можно приобрести по государственным
@@ -32,7 +32,7 @@
             </p>
             <blockquote class="text-white text-base md:text-xl mt-7 md:pl-9 relative">
                 <div class="blockquote-lines">
-                    <img src="./../img/icons/quotes.svg" alt="Quotes">
+                    <img src="./img/icons/quotes.svg" alt="Quotes">
                 </div>
                 «Сегодня мы получаем все больше запросов на покупку недвижимости по государственным программам. Поэтому
                 как только наши проекты получают все необходимые разрешительные документы, мы присоединяемся к таким
