--- a/src/html/about.html
+++ b/src/html/about.html
@@ -2,18 +2,18 @@
 
 <section class="pb-12">
     <div class="swiper-slide pb-10 pt-36 relative overflow-hidden">
-        <div class="bg-[url('../img/index/slide-bgd-2.jpg')] bg-center absolute top-0 left-0 w-full h-screen -z-10 opacity-50">
+        <div class="bg-[url('./img/index/slide-bgd-2.jpg')] bg-center absolute top-0 left-0 w-full h-screen -z-10 opacity-50">
         </div>
         <div class="bg-gradient-to-t from-blue-500 from-30% w-full h-52 absolute -z-10 bottom-0 left-0"></div>
         <div class="bg-gradient-to-t from-blue-500 from-30% w-full h-52 absolute -z-10 top-0 left-0 rotate-180"></div>
 
         <div class="container">
             <div class="banner__item__head md:flex items-center">
-                <img src="../img/index/Budha-logo.svg" class="mb-7 md:mb-0" alt="logo">
+                <img src="./img/index/Budha-logo.svg" class="mb-7 md:mb-0" alt="logo">
                 <div class="con md:ml-10 ">
                     <div class="relative px-5 py-3 w-fit md:text-center md:px-7">
-                        <img class="absolute top-0 left-0 -z-10 md:hidden" src="../img/index/bgd-decor.png" alt="bgd">
-                        <img class="absolute top-0 left-0 -z-10 hidden md:block h-[-webkit-fill-available]" src="../img/index/bgd-decor-2.png" alt="bgd">
+                        <img class="absolute top-0 left-0 -z-10 md:hidden" src="./img/index/bgd-decor.png" alt="bgd">
+                        <img class="absolute top-0 left-0 -z-10 hidden md:block h-[-webkit-fill-available]" src="./img/index/bgd-decor-2.png" alt="bgd">
                         <h2 class="text-sm text-white">
                             Стоимость <br class="hidden md:block"> <span class="font-bold md:text-xl">от $70.000</span>
                         </h2>
@@ -42,13 +42,13 @@
 <section class="gallery py-14">
     <div class="container">
         <div class=" grid gap-4 grid-cols-3 md:grid-cols-2">
-            <img src="../img/about/gallery-ph-1.png" class="rounded-2xl flex items-center justify-center" alt="ph">
-            <img src="../img/about/gallery-ph-2.png" class="rounded-2xl flex items-center justify-center" alt="ph">
-            <img src="../img/about/gallery-ph-3.png" class="rounded-2xl flex items-center justify-center" alt="ph">
-            <img src="../img/about/gallery-ph-4.png" class="rounded-2xl flex items-center justify-center" alt="ph">
-            <img src="../img/about/gallery-ph-5.png" class="rounded-2xl flex items-center justify-center" alt="ph">
-            <img src="../img/about/gallery-ph-6.png" class="rounded-2xl flex items-center justify-center" alt="ph">
-            <img src="../img/about/gallery-ph-7.png" class="rounded-2xl flex items-center justify-center" alt="ph">
+            <img src="./img/about/gallery-ph-1.png" class="rounded-2xl flex items-center justify-center" alt="ph">
+            <img src="./img/about/gallery-ph-2.png" class="rounded-2xl flex items-center justify-center" alt="ph">
+            <img src="./img/about/gallery-ph-3.png" class="rounded-2xl flex items-center justify-center" alt="ph">
+            <img src="./img/about/gallery-ph-4.png" class="rounded-2xl flex items-center justify-center" alt="ph">
+            <img src="./img/about/gallery-ph-5.png" class="rounded-2xl flex items-center justify-center" alt="ph">
+            <img src="./img/about/gallery-ph-6.png" class="rounded-2xl flex items-center justify-center" alt="ph">
+            <img src="./img/about/gallery-ph-7.png" class="rounded-2xl flex items-center justify-center" alt="ph">
         </div>
 
         <button type="button" class="font-bold text-white text-sm w-full max-w-[205px] mt-5 border border-white rounded-xl p-4 m-auto flex justify-center hover:text-blue-400 hover:bg-white transition-all md:mt-7 md:p-6 md:max-w-[286px] md:text-base">
@@ -57,14 +57,14 @@
 
         <div class="grid md:grid-cols-2 gap-4">
             <div class="aspect-ratio-16/9 bg-gray-300 flex items-center justify-center">
-                <img src="../img/about/gallery-ph-7.png" alt="Image 1" class="w-full h-full object-cover" />
+                <img src="./img/about/gallery-ph-7.png" alt="Image 1" class="w-full h-full object-cover" />
             </div>
             <div class="grid grid-cols-2 gap-4 md:grid-cols-3">
                 <div class="aspect-ratio-16/9 bg-gray-300 flex items-center justify-center">
-                    <img src="../img/about/gallery-ph-7.png" alt="Image 2" class="w-full h-full object-cover" />
+                    <img src="./img/about/gallery-ph-7.png" alt="Image 2" class="w-full h-full object-cover" />
                 </div>
                 <div class="aspect-ratio-16/9 bg-gray-300 flex items-center justify-center">
-                    <img src="../img/about/gallery-ph-7.png" alt="Image 3" class="w-full h-full object-cover" />
+                    <img src="./img/about/gallery-ph-7.png" alt="Image 3" class="w-full h-full object-cover" />
                 </div>
             </div>
         </div>
@@ -88,7 +88,7 @@
                     XO Complex идеально подойдёт для тех, кто любит быть в эпицентре событий.
                 </p>
             </div>
-            <img src="../img/about/club-img.png" alt="ph">
+            <img src="./img/about/club-img.png" alt="ph">
         </div>
 
         <ul class="border border-blue-400 rounded-2xl md:flex">
@@ -109,13 +109,13 @@
                 </p>
             </li>
             <li class="py-8 px-5 w-full border-b border-blue-400 lg:py-12 lg:px-8 md:border-b-0 md:border-r">
-                <img src="../img/about/camera.svg" class="max-w-[25px] mb-2 md:mb-4 md:max-w-[40px]" alt="ic">
+                <img src="./img/about/camera.svg" class="max-w-[25px] mb-2 md:mb-4 md:max-w-[40px]" alt="ic">
                 <p class="text-white text-sm md:text-base">
                     кинотеатр под <br class="hidden lg:block">открытым небом
                 </p>
             </li>
             <li class="py-8 px-5 w-full lg:py-12 lg:px-8">
-                <img src="../img/about/whater.svg" class="max-w-[25px] mb-2 md:mb-4 md:max-w-[40px]" alt="ic">
+                <img src="./img/about/whater.svg" class="max-w-[25px] mb-2 md:mb-4 md:max-w-[40px]" alt="ic">
                 <p class="text-white text-sm md:text-base">
                     rooftop с баром <br class="hidden lg:block">и видом на океан
                 </p>
@@ -124,10 +124,10 @@
     </div>
 </section>
 
-<section class="bg-[url('../img/about/bgd-sec-changy.jpg')] bg-no-repeat bg-cover py-14 md:py-24">
+<section class="bg-[url('./img/about/bgd-sec-changy.jpg')] bg-no-repeat bg-cover py-14 md:py-24">
     <div class="container">
-        <div class="bg-[url('../img/about/changy-bgd.png')] lg:bg-[url('../img/about/chang-bgd.png')] bg-no-repeat bg-cover pt-14 pb-9 px-5 relative md:px-10 lg:flex lg:items-center lg:gap-7 lg:py-24 lg:pr-[82px] lg:pl-[125px]">
-            <img src="../img/about/phone-mob.png" class="absolute top-[-40px] right-[-30px] lg:hidden" alt="ph">
+        <div class="bg-[url('./img/about/changy-bgd.png')] lg:bg-[url('./img/about/chang-bgd.png')] bg-no-repeat bg-cover pt-14 pb-9 px-5 relative md:px-10 lg:flex lg:items-center lg:gap-7 lg:py-24 lg:pr-[82px] lg:pl-[125px]">
+            <img src="./img/about/phone-mob.png" class="absolute top-[-40px] right-[-30px] lg:hidden" alt="ph">
             <div>
                 <h2 class="font-bold text-white text-3xl mb-7">
                     Чангу
@@ -150,44 +150,44 @@
     
                 <ul class="max-w-[225px] lg:max-w-none">
                     <li class="flex items-center gap-[10px] md:gap-[20px] mb-4 md:mb-5">
-                        <img src="../img/about/galka.svg" class="max-w-[15px] md:max-w-none" alt="ic">
+                        <img src="./img/about/galka.svg" class="max-w-[15px] md:max-w-none" alt="ic">
                         <p class="text-white text-sm md:text-base">
                             Чангу является одной из главных инвестиционных достопримечательностей на рынке курортной недвижимости Бали.
                         </p>
                     </li>
                     <li class="flex items-center gap-[10px] md:gap-[20px] mb-4 md:mb-5">
-                        <img src="../img/about/galka.svg" class="max-w-[15px] md:max-w-none" alt="ic">
+                        <img src="./img/about/galka.svg" class="max-w-[15px] md:max-w-none" alt="ic">
                         <p class="text-white text-sm md:text-base">
                             Средняя заполняемость в Чангу от 70%
                         </p>
                     </li>
                     <li class="flex items-center gap-[10px] md:gap-[20px] mb-4 md:mb-5">
-                        <img src="../img/about/galka.svg" class="max-w-[15px] md:max-w-none" alt="ic">
+                        <img src="./img/about/galka.svg" class="max-w-[15px] md:max-w-none" alt="ic">
                         <p class="text-white text-sm md:text-base">
                             Среднегодовой рост стоимости недвижимости в этом районе составляет 20% 
                         </p>
                     </li>
                     <li class="flex items-center gap-[10px] md:gap-[20px] mb-4 md:mb-5">
-                        <img src="../img/about/galka.svg" class="max-w-[15px] md:max-w-none" alt="ic">
+                        <img src="./img/about/galka.svg" class="max-w-[15px] md:max-w-none" alt="ic">
                         <p class="text-white text-sm md:text-base">
                             За 4 года стоимость земли выросла более чем на 300%
                         </p>
                     </li>
                     <li class="flex items-center gap-[10px] md:gap-[20px] mb-4 md:mb-5">
-                        <img src="../img/about/galka.svg" class="max-w-[15px] md:max-w-none" alt="ic">
+                        <img src="./img/about/galka.svg" class="max-w-[15px] md:max-w-none" alt="ic">
                         <p class="text-white text-sm md:text-base">
                             Среднегодовая арендная плата увеличилась на 15% в год
                         </p>
                     </li>
                     <li class="flex items-center gap-[10px] md:gap-[20px] mb-4 md:mb-5">
-                        <img src="../img/about/galka.svg" class="max-w-[15px] md:max-w-none" alt="ic">
+                        <img src="./img/about/galka.svg" class="max-w-[15px] md:max-w-none" alt="ic">
                         <p class="text-white text-sm md:text-base">
                             Количество запросов на недвижимость в Чангу растет на 30-40% в год
                         </p>
                     </li>
                 </ul>
             </div>
-            <img src="../img/about/tel-desk.png" class="hidden lg:block" alt="ph">
+            <img src="./img/about/tel-desk.png" class="hidden lg:block" alt="ph">
         </div>
     </div>
 </section>
@@ -199,9 +199,9 @@
         </h2>
 
         <div class="overflow-hidden rounded-2xl mb-7 lg:mb-0 lg:rounded-none lg:rounded-t-2xl">
-            <img src="../img/about/map.jpg" class="scale-150 lg:scale-100" alt="map ph">
+            <img src="./img/about/map.jpg" class="scale-150 lg:scale-100" alt="map ph">
             <a href="#" class="flex relative z-10 gap-[5px] p-3 bg-blue-400 font-bold text-white text-xs justify-center md:text-base md:gap-2">
-                <img src="../img/about/location.svg" class="max-w-[15px] md:max-w-none" alt="location ic">
+                <img src="./img/about/location.svg" class="max-w-[15px] md:max-w-none" alt="location ic">
                 Посмотреть локацию в Google Maps
             </a>
         </div>
@@ -217,7 +217,7 @@
     </div>
 </section>
 
-<section class="bg-[url('../img/about/apartment-bgd.jpg')] bg-no-repeat bg-cover py-14 md:py-24">
+<section class="bg-[url('./img/about/apartment-bgd.jpg')] bg-no-repeat bg-cover py-14 md:py-24">
     <div class="container">
         <div class="bg-blue-600 py-10 px-5 rounded-2xl relative">
 
@@ -231,17 +231,17 @@
             </div>
             <div class="swiper mySwiper-about relative">
                 <a href="#" class="absolute top-2 right-2 z-10">
-                    <img src="../img/about/360.png" class="max-w-[95px]" alt="ph">
+                    <img src="./img/about/360.png" class="max-w-[95px]" alt="ph">
                 </a>
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                        <img src="../img/about/about-slide-1.jpg" class="rounded-xl" alt="ph">
+                        <img src="./img/about/about-slide-1.jpg" class="rounded-xl" alt="ph">
                     </div>
                     <div class="swiper-slide">
-                        <img src="../img/about/about-slide-1.jpg" class="rounded-xl" alt="ph">
+                        <img src="./img/about/about-slide-1.jpg" class="rounded-xl" alt="ph">
                     </div>
                     <div class="swiper-slide">
-                        <img src="../img/about/about-slide-1.jpg" class="rounded-xl" alt="ph">
+                        <img src="./img/about/about-slide-1.jpg" class="rounded-xl" alt="ph">
                     </div>
                 </div>
                 <div class="swiper-button-next"></div>
@@ -327,37 +327,37 @@
         <div class="lg:grid grid-cols-3 gap-5">
 
             <div class="flex items-center gap-5 py-7 border-t border-whiteOp-300 lg:gap-7 lg:py-14 lg:px-10 lg:border lg:rounded-2xl">
-                <img src="../img/about/cost-ic-1.svg" class="max-w-[40px] md:max-w-none" alt="ic">
+                <img src="./img/about/cost-ic-1.svg" class="max-w-[40px] md:max-w-none" alt="ic">
                 <p class="text-white text-sm md:text-base">
                     Полное юридическое сопровождение
                 </p>
             </div>
             <div class="flex items-center gap-5 py-7 border-t border-whiteOp-300 lg:gap-7 lg:py-14 lg:px-10 lg:border lg:rounded-2xl">
-                <img src="../img/about/cost-ic-2.svg" class="max-w-[40px] md:max-w-none" alt="ic">
+                <img src="./img/about/cost-ic-2.svg" class="max-w-[40px] md:max-w-none" alt="ic">
                 <p class="text-white text-sm md:text-base">
                     Проектирование и разработка дизайн проектов
                 </p>
             </div>
             <div class="flex items-center gap-5 py-7 border-t border-whiteOp-300 lg:gap-7 lg:py-14 lg:px-10 lg:border lg:rounded-2xl">
-                <img src="../img/about/cost-ic-3.svg" class="max-w-[40px] md:max-w-none" alt="ic">
+                <img src="./img/about/cost-ic-3.svg" class="max-w-[40px] md:max-w-none" alt="ic">
                 <p class="text-white text-sm md:text-base">
                     Строительство и технический надзор обьекта
                 </p>
             </div>
             <div class="flex items-center gap-5 py-7 border-t border-whiteOp-300 lg:gap-7 lg:py-14 lg:px-10 lg:border lg:rounded-2xl">
-                <img src="../img/about/cost-ic-4.svg" class="max-w-[40px] md:max-w-none" alt="ic">
+                <img src="./img/about/cost-ic-4.svg" class="max-w-[40px] md:max-w-none" alt="ic">
                 <p class="text-white text-sm md:text-base">
                     Внутренняя отделка и мебелирование
                 </p>
             </div>
             <div class="flex items-center gap-5 py-7 border-t border-whiteOp-300 lg:gap-7 lg:py-14 lg:px-10 lg:border lg:rounded-2xl">
-                <img src="../img/about/cost-ic-5.svg" class="max-w-[40px] md:max-w-none" alt="ic">
+                <img src="./img/about/cost-ic-5.svg" class="max-w-[40px] md:max-w-none" alt="ic">
                 <p class="text-white text-sm md:text-base">
                     Разработка бизнес-плана по управлению объектом после сдачи
                 </p>
             </div>
             <div class="flex items-center gap-5 py-7 border-t border-b border-whiteOp-300 lg:gap-7 lg:py-14 lg:px-10 lg:border lg:rounded-2xl">
-                <img src="../img/about/cost-ic-6.svg" class="max-w-[40px] md:max-w-none" alt="ic">
+                <img src="./img/about/cost-ic-6.svg" class="max-w-[40px] md:max-w-none" alt="ic">
                 <p class="text-white text-sm md:text-base">
                     Консультирование по открытию компании, расчетного счета, рабочих виз
                 </p>
@@ -368,7 +368,7 @@
 </section>
 
 <section class="photo">
-    <img src="../img/about/sec-photo.jpg" alt="ph">
+    <img src="./img/about/sec-photo.jpg" alt="ph">
 </section>
 
 @@include('blocks/footer.html')
