--- a/src/html/articles.html
+++ b/src/html/articles.html
@@ -3,7 +3,7 @@
 <section class="pb-24 relative bg-blue-500 overflow-hidden">
     <div class="bg-gradient-to-t from-blue-500 from-70% lg:from-70%  w-full h-[2000px] absolute z-10"></div>
 
-    <img class="absolute top-0 z-0 opacity-40 w-[600vw] max-w-max md:w-full min-h-[1000px] h-screen object-cover" src="./../img/news/news-bgd.jpg"
+    <img class="absolute top-0 z-0 opacity-40 w-[600vw] max-w-max md:w-full min-h-[1000px] h-screen object-cover" src="./img/news/news-bgd.jpg"
         alt="Image">
 
     <div class="container mx-auto relative z-20 pt-32 md:pt-64">
@@ -31,7 +31,7 @@
     </div>
 
     <div class="absolute -right-36 bottom-40 w-72 h-72 z-10">
-        <img src="./../img/icons/vector-logo.svg" alt="vector-logo">
+        <img src="./img/icons/vector-logo.svg" alt="vector-logo">
     </div>
 </section>
 
