--- a/src/html/blocks/header.html
+++ b/src/html/blocks/header.html
@@ -20,8 +20,8 @@
 		<div class="container xl:max-w-[1920px]">
 			<div class="header__inner flex items-center justify-between gap-3 relative">
 				<a href="../index.html">
-					<img src="../../img/index/logo-desk.svg" class="hidden lg:min-w-[80px] lg:block" alt="logo">
-					<img src="../../img/icons/logo-mob.svg" class="lg:hidden" alt="logo ic">
+					<img src="./img/index/logo-desk.svg" class="hidden lg:min-w-[80px] lg:block" alt="logo">
+					<img src="./img/icons/logo-mob.svg" class="lg:hidden" alt="logo ic">
 				</a>
 				
 				
@@ -32,7 +32,7 @@
 							after:block after:w-0 hover:after:w-2/3 after:h-[1px] after:bg-white after:absolute after:bottom-[-9px] after:right-0 after:transition-all after:duration-300
 						">
 							Проекты 
-							<img src="../../img/index/small-arrow-white.svg" alt="ic">
+							<img src="./img/index/small-arrow-white.svg" alt="ic">
 						</button>
 						<div class="projectsMenu flex flex-col p-6 rounded-xl bg-blue-500 absolute top-[30px] left-0 border border-whiteOp-300 hidden">
 							<a href="#" class="text-white text-sm mb-4 whitespace-nowrap relative
@@ -92,13 +92,13 @@
 					Запланировать встречу
 				</button>
 				<a href="tel:+6281246502783" class="3xl:flex hidden items-center gap-1 text-white text-base font-bold ">
-					<img src="../../img/index/whatsapp.png" alt="ic">
+					<img src="./img/index/whatsapp.png" alt="ic">
 					+62 (812) 4650-27-83
 				</a>
 				<div class="hidden xl:flex xl:flex-col relative">
 					<button class="projectsButton flex items-center gap-1 text-white text-sm">
 						EN
-						<img src="../../img/index/small-arrow-white.svg" alt="ic">
+						<img src="./img/index/small-arrow-white.svg" alt="ic">
 					</button>
 					<div class="projectsMenu flex flex-col p-6 rounded-xl bg-blue-500 absolute top-[30px] left-[50%] translate-x-[-50%] border border-whiteOp-300 hidden">
 						<a href="#" class="text-white text-sm mb-4 hover:text-blue-400 transition-all">
@@ -138,13 +138,13 @@
 				</div>
 
 				<button id="burgerBtn" type="button" class="3xl:hidden block ">
-					<img src="../../img/icons/burder.svg" class="min-w-[28px]" alt="burger ic">
+					<img src="./img/icons/burder.svg" class="min-w-[28px]" alt="burger ic">
 				</button>
 				<div id="burgerMenu" class="burger__body hidden absolute top-[47px] lg:top-[114px] left-0 bg-blue-500 w-[calc(100%_+_60px)] -ml-[30px] flex-col flex text-center pt-12 pb-8 text-white text-lg border-t-2 border-whiteOp-300">
 					<div class="burger__proj mb-8 lg:hidden block">
 						<p id="toggleProjects" class="flex items-center gap-1 justify-center hover:text-blue-400 transition-all cursor-pointer">
 							Проекты
-							<img src="../../img/index/small-arrow-white.svg" alt="">
+							<img src="./img/index/small-arrow-white.svg" alt="">
 						</p>
 						<div id="projectsBody" class="burger__proj_body mt-8 flex flex-col hidden">
 							<a href="#" class="mb-8 hover:text-blue-400 transition-all">
@@ -204,22 +204,22 @@
 						<ul class="flex items-center gap-1">
 							<li>
 								<a href="#">
-									<img src="../../img/index/tw-burger.svg" alt="ic">
+									<img src="./img/index/tw-burger.svg" alt="ic">
 								</a>
 							</li>
 							<li>
 								<a href="#">
-									<img src="../../img/index/inst-burger.svg" alt="ic">
+									<img src="./img/index/inst-burger.svg" alt="ic">
 								</a>
 							</li>
 							<li>
 								<a href="#">
-									<img src="../../img/index/face-burger.svg" alt="ic">
+									<img src="./img/index/face-burger.svg" alt="ic">
 								</a>
 							</li>
 							<li>
 								<a href="#">
-									<img src="../../img/index/yout-burger.svg" alt="ic">
+									<img src="./img/index/yout-burger.svg" alt="ic">
 								</a>
 							</li>
 						</ul>
