--- a/src/html/cooperation.html
+++ b/src/html/cooperation.html
@@ -8,7 +8,7 @@
         <div class="bg-gradient-to-t from-blue-500 from-60% lg:from-60%  w-full h-[2000px] absolute z-10"></div>
 
         <img class="absolute top-0 z-0 opacity-40 w-[600vw] max-w-max md:w-full min-h-[1000px] h-screen object-cover"
-            src="./../img/career/img.jpg" alt="Image">
+            src="./img/career/img.jpg" alt="Image">
 
         <div class="container mx-auto relative z-20 pt-32 md:pt-64">
             <h1 data-aos="fade-up"
@@ -27,71 +27,71 @@
                 <button
                     class="border cursor-pointer group relative lg:h-[172px] mb-[10px] last:mb-0 lg:border-none border-white/50 rounded-[10px] py-8 bg-no-repeat w-full">
                     <img class="absolute lg:group-hover:hidden hidden top-0 lg:block h-full w-full"
-                        src="./../img/cooperation/border-bgd.svg" alt="">
+                        src="./img/cooperation/border-bgd.svg" alt="">
                     <img class="absolute lg:group-hover:block hidden top-0 lg:hidden h-full w-full"
-                        src="./../img/cooperation/border-bgd-hover.svg" alt="">
+                        src="./img/cooperation/border-bgd-hover.svg" alt="">
 
                     <div
                         class="flex items-center justify-center lg:p-4 lg:bg-blue-400 lg:w-fit lg:rounded-[20px] lg:mx-auto lg:mt-[-75px]">
-                        <img src="./../img/cooperation/banner-block-icon-1.svg" alt="img">
+                        <img src="./img/cooperation/banner-block-icon-1.svg" alt="img">
                     </div>
                     <div class="relative z-10">
                         <p class="my-4 text-white font-bold text-center">Брокерам</p>
-                        <img class="mx-auto" src="./../img/icons/double-arrow-down-white.svg" alt="img">
+                        <img class="mx-auto" src="./img/icons/double-arrow-down-white.svg" alt="img">
                     </div>
                 </button>
                 <button
                     class="border cursor-pointer group relative lg:h-[172px] mb-[10px] last:mb-0 lg:border-none border-white/50 rounded-[10px] py-8 bg-no-repeat w-full">
                     <img class="absolute lg:group-hover:hidden hidden top-0 lg:block h-full w-full"
-                        src="./../img/cooperation/border-bgd.svg" alt="">
+                        src="./img/cooperation/border-bgd.svg" alt="">
                     <img class="absolute lg:group-hover:block hidden top-0 lg:hidden h-full w-full"
-                        src="./../img/cooperation/border-bgd-hover.svg" alt="">
+                        src="./img/cooperation/border-bgd-hover.svg" alt="">
 
                     <div
                         class="flex items-center justify-center lg:p-4 lg:bg-blue-400 lg:w-fit lg:rounded-[20px] lg:mx-auto lg:mt-[-75px]">
-                        <img src="./../img/cooperation/banner-block-icon-2.svg" alt="img">
+                        <img src="./img/cooperation/banner-block-icon-2.svg" alt="img">
                     </div>
                     <div class="relative z-10">
                         <p class="my-4 text-white font-bold text-center">
                             Агентствам недвижимости
                         </p>
-                        <img class="mx-auto" src="./../img/icons/double-arrow-down-white.svg" alt="img">
+                        <img class="mx-auto" src="./img/icons/double-arrow-down-white.svg" alt="img">
                     </div>
                 </button>
                 <button
                     class="border cursor-pointer group relative lg:h-[172px] mb-[10px] last:mb-0 lg:border-none border-white/50 rounded-[10px] py-8 bg-no-repeat w-full">
                     <img class="absolute lg:group-hover:hidden hidden top-0 lg:block h-full w-full"
-                        src="./../img/cooperation/border-bgd.svg" alt="">
+                        src="./img/cooperation/border-bgd.svg" alt="">
                     <img class="absolute lg:group-hover:block hidden top-0 lg:hidden h-full w-full"
-                        src="./../img/cooperation/border-bgd-hover.svg" alt="">
+                        src="./img/cooperation/border-bgd-hover.svg" alt="">
 
                     <div
                         class="flex items-center justify-center lg:p-4 lg:bg-blue-400 lg:w-fit lg:rounded-[20px] lg:mx-auto lg:mt-[-75px]">
-                        <img src="./../img/cooperation/banner-block-icon-3.svg" alt="img">
+                        <img src="./img/cooperation/banner-block-icon-3.svg" alt="img">
                     </div>
                     <div class="relative z-10">
                         <p class="my-4 text-white font-bold text-center">
                             Маркетингу
                         </p>
-                        <img class="mx-auto" src="./../img/icons/double-arrow-down-white.svg" alt="img">
+                        <img class="mx-auto" src="./img/icons/double-arrow-down-white.svg" alt="img">
                     </div>
                 </button>
                 <button
                     class="border cursor-pointer group relative lg:h-[172px] mb-[10px] last:mb-0 lg:border-none border-white/50 rounded-[10px] py-8 bg-no-repeat w-full">
                     <img class="absolute lg:group-hover:hidden hidden top-0 lg:block h-full w-full"
-                        src="./../img/cooperation/border-bgd.svg" alt="">
+                        src="./img/cooperation/border-bgd.svg" alt="">
                     <img class="absolute lg:group-hover:block hidden top-0 lg:hidden h-full w-full"
-                        src="./../img/cooperation/border-bgd-hover.svg" alt="">
+                        src="./img/cooperation/border-bgd-hover.svg" alt="">
 
                     <div
                         class="flex items-center justify-center lg:p-4 lg:bg-blue-400 lg:w-fit lg:rounded-[20px] lg:mx-auto lg:mt-[-75px]">
-                        <img src="./../img/cooperation/banner-block-icon-4.svg" alt="img">
+                        <img src="./img/cooperation/banner-block-icon-4.svg" alt="img">
                     </div>
                     <div class="relative z-10">
                         <p class="my-4 text-white font-bold text-center">
                             Партнерство
                         </p>
-                        <img class="mx-auto" src="./../img/icons/double-arrow-down-white.svg" alt="img">
+                        <img class="mx-auto" src="./img/icons/double-arrow-down-white.svg" alt="img">
                     </div>
                 </button>
             </div>
@@ -100,7 +100,7 @@
         </div>
 
         <div class="absolute -right-[72px] top-[250px] w-36 z-10">
-            <img src="./../img/icons/vector-logo.svg" alt="vector-logo">
+            <img src="./img/icons/vector-logo.svg" alt="vector-logo">
         </div>
     </section>
 
@@ -120,7 +120,7 @@
                     <button class="white-button hidden md:block">Начать сотрудничество</button>
                 </div>
                 <img data-aos="fade-up" class="max-w-[740px] w-full h-[180px] md:h-[412px] rounded-[20px]"
-                    src="./../img/career/img.jpg" alt="img">
+                    src="./img/career/img.jpg" alt="img">
             </div>
             <div data-aos="fade-up"
                 class="border border-white/20 py-[60px] pl-5 pr-3 rounded-[20px] md:pt-20 md:pb-24 md:pl md:pl-[120px] md:pr-[120px]">
@@ -196,7 +196,7 @@
                     <button class="white-button hidden md:block">Начать сотрудничество</button>
                 </div>
                 <img data-aos="fade-left" class="max-w-[740px] w-full h-[180px] md:h-[412px] rounded-[20px]"
-                    src="./../img/career/img.jpg" alt="img">
+                    src="./img/career/img.jpg" alt="img">
             </div>
             <div data-aos="fade-up"
                 class="border border-white/20 py-[60px] pl-5 pr-3 rounded-[20px] md:pt-20 md:pb-24 md:pl md:pl-[120px] md:pr-[120px]">
@@ -208,7 +208,7 @@
                     <li class="flex items-center mb-8 last:mb-0 md:mb-0">
                         <div
                             class="md:mx-auto num font-bold text-xs md:text-lg rounded-[10px] text-white flex items-center justify-center bg-blue-400 md:min-w-16 md:w-16 md:h-16 min-w-9 w-9 h-9">
-                            <img class="w-3 h-3 md:w-auto md:h-auto" src="./../img/icons/white-check.svg" alt="">
+                            <img class="w-3 h-3 md:w-auto md:h-auto" src="./img/icons/white-check.svg" alt="">
                         </div>
                         <p class="text-sm md:text-lg text-white ml-5">Оказываем информационную поддержку по нашим
                             проектам
@@ -217,7 +217,7 @@
                     <li class="flex items-center mb-8 last:mb-0 md:mb-0">
                         <div
                             class="md:mx-auto num font-bold text-xs md:text-lg rounded-[10px] text-white flex items-center justify-center bg-blue-400 md:min-w-16 md:w-16 md:h-16 min-w-9 w-9 h-9">
-                            <img class="w-3 h-3 md:w-auto md:h-auto" src="./../img/icons/white-check.svg" alt="">
+                            <img class="w-3 h-3 md:w-auto md:h-auto" src="./img/icons/white-check.svg" alt="">
                         </div>
                         <p class="text-sm md:text-lg text-white ml-5">Консультируем относительно ведения рекламных
                             кампаний
@@ -226,7 +226,7 @@
                     <li class="flex items-center mb-8 last:mb-0 md:mb-0">
                         <div
                             class="md:mx-auto num font-bold text-xs md:text-lg rounded-[10px] text-white flex items-center justify-center bg-blue-400 md:min-w-16 md:w-16 md:h-16 min-w-9 w-9 h-9">
-                            <img class="w-3 h-3 md:w-auto md:h-auto" src="./../img/icons/white-check.svg" alt="">
+                            <img class="w-3 h-3 md:w-auto md:h-auto" src="./img/icons/white-check.svg" alt="">
                         </div>
                         <p class="text-sm md:text-lg text-white ml-5">Помогаем в решении юридических вопросов.</p>
                     </li>
@@ -255,7 +255,7 @@
                     <button class="white-button hidden md:block">Начать сотрудничество</button>
                 </div>
                 <img data-aos="fade-right" class="max-w-[740px] w-full h-[180px] md:h-[412px] rounded-[20px]"
-                    src="./../img/career/img.jpg" alt="img">
+                    src="./img/career/img.jpg" alt="img">
             </div>
             <div data-aos="fade-up"
                 class="border border-white/20 py-[60px] pl-5 pr-3 rounded-[20px] md:pt-20 md:pb-24 md:pl md:pl-[120px] md:pr-[120px]">
@@ -267,7 +267,7 @@
                     <li class="flex items-center mb-8 last:mb-0 md:mb-0">
                         <div
                             class="md:mx-auto num font-bold text-xs md:text-lg rounded-[10px] text-white flex items-center justify-center bg-blue-400 md:min-w-16 md:w-16 md:h-16 min-w-9 w-9 h-9">
-                            <img class="w-3 h-3 md:w-auto md:h-auto" src="./../img/icons/white-check.svg" alt="">
+                            <img class="w-3 h-3 md:w-auto md:h-auto" src="./img/icons/white-check.svg" alt="">
                         </div>
                         <p class="text-sm md:text-lg text-white ml-5">Оказываем информационную поддержку по нашим
                             проектам
@@ -276,7 +276,7 @@
                     <li class="flex items-center mb-8 last:mb-0 md:mb-0">
                         <div
                             class="md:mx-auto num font-bold text-xs md:text-lg rounded-[10px] text-white flex items-center justify-center bg-blue-400 md:min-w-16 md:w-16 md:h-16 min-w-9 w-9 h-9">
-                            <img class="w-3 h-3 md:w-auto md:h-auto" src="./../img/icons/white-check.svg" alt="">
+                            <img class="w-3 h-3 md:w-auto md:h-auto" src="./img/icons/white-check.svg" alt="">
                         </div>
                         <p class="text-sm md:text-lg text-white ml-5">Консультируем относительно ведения рекламных
                             кампаний
@@ -285,7 +285,7 @@
                     <li class="flex items-center mb-8 last:mb-0 md:mb-0">
                         <div
                             class="md:mx-auto num font-bold text-xs md:text-lg rounded-[10px] text-white flex items-center justify-center bg-blue-400 md:min-w-16 md:w-16 md:h-16 min-w-9 w-9 h-9">
-                            <img class="w-3 h-3 md:w-auto md:h-auto" src="./../img/icons/white-check.svg" alt="">
+                            <img class="w-3 h-3 md:w-auto md:h-auto" src="./img/icons/white-check.svg" alt="">
                         </div>
                         <p class="text-sm md:text-lg text-white ml-5">Помогаем в решении юридических вопросов.</p>
                     </li>
@@ -311,7 +311,7 @@
                     <button class="white-button hidden md:block">Начать сотрудничество</button>
                 </div>
                 <img data-aos="fade-up" class="max-w-[740px] w-full h-[180px] md:h-[412px] rounded-[20px]"
-                    src="./../img/career/img.jpg" alt="img">
+                    src="./img/career/img.jpg" alt="img">
             </div>
             <div data-aos="fade-up"
                 class="border border-white/20 py-[60px] pl-5 pr-3 rounded-[20px] md:pt-20 md:pb-24 md:pl md:pl-[120px] md:pr-[120px]">
@@ -385,16 +385,16 @@
 
                     <div
                         class="h-[500px] md:h-[600px] relative rounded-3xl overflow-hidden bg-[#111111] rounded-br-none">
-                        <img src="./../img/discounts/image.jpg" class="opacity-50" alt="">
+                        <img src="./img/discounts/image.jpg" class="opacity-50" alt="">
                         <div class="bg-gradient-to-t from-blue-600 absolute bottom-0 left-0 w-full h-3/4"></div>
 
                         <div class="absolute top-0 left-0 w-full h-full p-5 md:p-7 flex flex-col">
                             <div class="block-bottom-point"></div>
 
                             <div class="flex justify-between mb-auto">
-                                <img class="w-[90px]" src="./../img/icons/icon-club.svg" alt="">
+                                <img class="w-[90px]" src="./img/icons/icon-club.svg" alt="">
                                 <span
-                                    class="md:px-5 py-2 px-4 bg-[url('./../img/icons/bgd-blue-dor-rd.svg')] bg-no-repeat bg-right-bottom h-fit rounded-tl-xl rounded-bl-xl rounded-tr-xl overflow-hidden text-xs md:text-sm text-white">
+                                    class="md:px-5 py-2 px-4 bg-[url('./img/icons/bgd-blue-dor-rd.svg')] bg-no-repeat bg-right-bottom h-fit rounded-tl-xl rounded-bl-xl rounded-tr-xl overflow-hidden text-xs md:text-sm text-white">
                                     80% Продано
                                 </span>
                             </div>
@@ -418,7 +418,7 @@
                                         Подробнее
                                     </button>
                                     <div class="flex items-center">
-                                        <img class="w-3" src="./../img/icons/point-white.svg" alt="">
+                                        <img class="w-3" src="./img/icons/point-white.svg" alt="">
                                         <span class="ml-1 text-sm text-white">Чангу</span>
                                     </div>
                                 </div>
@@ -433,16 +433,16 @@
 
                     <div
                         class="h-[500px] md:h-[600px] relative rounded-3xl overflow-hidden bg-[#111111] rounded-br-none">
-                        <img src="./../img/discounts/image.jpg" class="opacity-50" alt="">
+                        <img src="./img/discounts/image.jpg" class="opacity-50" alt="">
                         <div class="bg-gradient-to-t from-blue-600 absolute bottom-0 left-0 w-full h-3/4"></div>
 
                         <div class="absolute top-0 left-0 w-full h-full p-5 md:p-7 flex flex-col">
                             <div class="block-bottom-point"></div>
 
                             <div class="flex justify-between mb-auto">
-                                <img class="w-[90px]" src="./../img/icons/icon-club.svg" alt="">
+                                <img class="w-[90px]" src="./img/icons/icon-club.svg" alt="">
                                 <span
-                                    class="md:px-5 py-2 px-4 bg-[url('./../img/icons/bgd-blue-dor-rd.svg')] bg-no-repeat bg-right-bottom h-fit rounded-tl-xl rounded-bl-xl rounded-tr-xl overflow-hidden text-xs md:text-sm text-white">
+                                    class="md:px-5 py-2 px-4 bg-[url('./img/icons/bgd-blue-dor-rd.svg')] bg-no-repeat bg-right-bottom h-fit rounded-tl-xl rounded-bl-xl rounded-tr-xl overflow-hidden text-xs md:text-sm text-white">
                                     80% Продано
                                 </span>
                             </div>
@@ -466,7 +466,7 @@
                                         Подробнее
                                     </button>
                                     <div class="flex items-center">
-                                        <img class="w-3" src="./../img/icons/point-white.svg" alt="">
+                                        <img class="w-3" src="./img/icons/point-white.svg" alt="">
                                         <span class="ml-1 text-sm text-white">Чангу</span>
                                     </div>
                                 </div>
@@ -481,16 +481,16 @@
 
                     <div
                         class="h-[500px] md:h-[600px] relative rounded-3xl overflow-hidden bg-[#111111] rounded-br-none">
-                        <img src="./../img/discounts/image.jpg" class="opacity-50" alt="">
+                        <img src="./img/discounts/image.jpg" class="opacity-50" alt="">
                         <div class="bg-gradient-to-t from-blue-600 absolute bottom-0 left-0 w-full h-3/4"></div>
 
                         <div class="absolute top-0 left-0 w-full h-full p-5 md:p-7 flex flex-col">
                             <div class="block-bottom-point"></div>
 
                             <div class="flex justify-between mb-auto">
-                                <img class="w-[90px]" src="./../img/icons/icon-club.svg" alt="">
+                                <img class="w-[90px]" src="./img/icons/icon-club.svg" alt="">
                                 <span
-                                    class="md:px-5 py-2 px-4 bg-[url('./../img/icons/bgd-blue-dor-rd.svg')] bg-no-repeat bg-right-bottom h-fit rounded-tl-xl rounded-bl-xl rounded-tr-xl overflow-hidden text-xs md:text-sm text-white">
+                                    class="md:px-5 py-2 px-4 bg-[url('./img/icons/bgd-blue-dor-rd.svg')] bg-no-repeat bg-right-bottom h-fit rounded-tl-xl rounded-bl-xl rounded-tr-xl overflow-hidden text-xs md:text-sm text-white">
                                     80% Продано
                                 </span>
                             </div>
@@ -514,7 +514,7 @@
                                         Подробнее
                                     </button>
                                     <div class="flex items-center">
-                                        <img class="w-3" src="./../img/icons/point-white.svg" alt="">
+                                        <img class="w-3" src="./img/icons/point-white.svg" alt="">
                                         <span class="ml-1 text-sm text-white">Чангу</span>
                                     </div>
                                 </div>
