--- a/src/html/news.html
+++ b/src/html/news.html
@@ -3,7 +3,7 @@
 <section class="pb-24 relative bg-blue-500 overflow-hidden">
     <div class="bg-gradient-to-t from-blue-500 from-80% lg:from-80%  w-full h-full absolute z-10"></div>
 
-    <img class="absolute top-0 z-0 opacity-40 w-[600vw] max-w-max md:w-full" src="./../img/news/news-bgd.jpg"
+    <img class="absolute top-0 z-0 opacity-40 w-[600vw] max-w-max md:w-full" src="./img/news/news-bgd.jpg"
         alt="Image">
 
     <div class="container mx-auto relative z-20 pt-32 md:pt-64">
@@ -14,7 +14,7 @@
             <div class="select group relative z-40 flex md:hidden border-white/40 border-[1px] rounded-[10px] mt-7">
                 <div class="select__head flex items-center justify-between w-full h-12 px-4">
                     <span class="text-sm text-white font-bold">OM Club House</span>
-                    <img src="./../img/icons/arrow-white-down.svg" alt="Arrow" class="w-4 transition-all group-[.active]:-scale-y-100 scale-y-100">
+                    <img src="./img/icons/arrow-white-down.svg" alt="Arrow" class="w-4 transition-all group-[.active]:-scale-y-100 scale-y-100">
                 </div>
                 <div class="select__body transition-all group-[.active]:visible group-[.active]:opacity-100 group-[.active]:mt-2 invisible opacity-0 absolute top-full mt-0 px-4 border-white/40 border-[1px] rounded-[10px] w-full bg-blue-500">
                     <button class="select__item block text-white py-2">
@@ -64,7 +64,7 @@
     </div>
 
     <div class="absolute -right-36 bottom-40 w-72 h-72 z-10">
-        <img src="./../img/icons/vector-logo.svg" alt="vector-logo">
+        <img src="./img/icons/vector-logo.svg" alt="vector-logo">
     </div>
 </section>
 
