--- a/src/html/articlesSingle.html
+++ b/src/html/articlesSingle.html
@@ -1,7 +1,7 @@
 @@include('blocks/header.html')
 
 <section class="bg-blue-500 pt-32 md:pt-64">
-    <div class="bg-[url('/img/news/bgd-single.jpg')] absolute top-0 left-0 w-full h-screen z-0 opacity-70">
+    <div class="bg-[url('./../img/news/bgd-single.jpg')] absolute top-0 left-0 w-full h-screen z-0 opacity-70">
         <div class="bg-gradient-to-t from-blue-500 absolute top-0 left-0 w-full h-full"></div>
     </div>
     <div class="container relative z-10">
