--- a/src/html/cooperation.html
+++ b/src/html/cooperation.html
@@ -394,7 +394,7 @@
                             <div class="flex justify-between mb-auto">
                                 <img class="w-[90px]" src="./img/icons/icon-club.svg" alt="">
                                 <span
-                                    class="md:px-5 py-2 px-4 bg-[url('./img/icons/bgd-blue-dor-rd.svg')] bg-no-repeat bg-right-bottom h-fit rounded-tl-xl rounded-bl-xl rounded-tr-xl overflow-hidden text-xs md:text-sm text-white">
+                                    class="md:px-5 py-2 px-4 bg-[url('./../img/icons/bgd-blue-dor-rd.svg')] bg-no-repeat bg-right-bottom h-fit rounded-tl-xl rounded-bl-xl rounded-tr-xl overflow-hidden text-xs md:text-sm text-white">
                                     80% Продано
                                 </span>
                             </div>
@@ -442,7 +442,7 @@
                             <div class="flex justify-between mb-auto">
                                 <img class="w-[90px]" src="./img/icons/icon-club.svg" alt="">
                                 <span
-                                    class="md:px-5 py-2 px-4 bg-[url('./img/icons/bgd-blue-dor-rd.svg')] bg-no-repeat bg-right-bottom h-fit rounded-tl-xl rounded-bl-xl rounded-tr-xl overflow-hidden text-xs md:text-sm text-white">
+                                    class="md:px-5 py-2 px-4 bg-[url('./../img/icons/bgd-blue-dor-rd.svg')] bg-no-repeat bg-right-bottom h-fit rounded-tl-xl rounded-bl-xl rounded-tr-xl overflow-hidden text-xs md:text-sm text-white">
                                     80% Продано
                                 </span>
                             </div>
@@ -490,7 +490,7 @@
                             <div class="flex justify-between mb-auto">
                                 <img class="w-[90px]" src="./img/icons/icon-club.svg" alt="">
                                 <span
-                                    class="md:px-5 py-2 px-4 bg-[url('./img/icons/bgd-blue-dor-rd.svg')] bg-no-repeat bg-right-bottom h-fit rounded-tl-xl rounded-bl-xl rounded-tr-xl overflow-hidden text-xs md:text-sm text-white">
+                                    class="md:px-5 py-2 px-4 bg-[url('./../img/icons/bgd-blue-dor-rd.svg')] bg-no-repeat bg-right-bottom h-fit rounded-tl-xl rounded-bl-xl rounded-tr-xl overflow-hidden text-xs md:text-sm text-white">
                                     80% Продано
                                 </span>
                             </div>
