--- a/src/html/discountsSingle.html
+++ b/src/html/discountsSingle.html
@@ -1,7 +1,7 @@
 @@include('blocks/header.html')
 
 <section class="bg-blue-500 pt-32 md:pt-64 relative overflow-hidden">
-    <div class="bg-[url('/img/news/bgd-single.jpg')] absolute top-0 left-0 w-full h-screen z-0 opacity-70">
+    <div class="bg-[url('./../img/news/bgd-single.jpg')] absolute top-0 left-0 w-full h-screen z-0 opacity-70">
         <div class="bg-gradient-to-t from-blue-500 absolute top-0 left-0 w-full h-full"></div>
     </div>
     <div class="absolute -right-36 bottom-36 w-72 h-72 z-10">
@@ -13,7 +13,7 @@
 
             <div class="flex before:rounded-sm items-center">
                 <span
-                class="md:px-5 py-2 px-4 bg-[url('./img/icons/bgd-blue-dor-rd.svg')] bg-no-repeat bg-right-bottom h-fit rounded-tl-xl rounded-bl-xl rounded-tr-xl overflow-hidden text-xs md:text-sm text-white">
+                class="md:px-5 py-2 px-4 bg-[url('./../img/icons/bgd-blue-dor-rd.svg')] bg-no-repeat bg-right-bottom h-fit rounded-tl-xl rounded-bl-xl rounded-tr-xl overflow-hidden text-xs md:text-sm text-white">
                     Действует до 30 марта 2024
                 </span>
             </div>
@@ -88,7 +88,7 @@
                             <div class="flex justify-between mb-auto">
                                 <img class="w-[90px]" src="./img/icons/icon-club.svg" alt="">
                                 <span
-                                    class="md:px-5 py-2 px-4 bg-[url('./img/icons/bgd-blue-dor-rd.svg')] bg-no-repeat bg-right-bottom h-fit rounded-tl-xl rounded-bl-xl rounded-tr-xl overflow-hidden text-xs md:text-sm text-white">
+                                    class="md:px-5 py-2 px-4 bg-[url('./../img/icons/bgd-blue-dor-rd.svg')] bg-no-repeat bg-right-bottom h-fit rounded-tl-xl rounded-bl-xl rounded-tr-xl overflow-hidden text-xs md:text-sm text-white">
                                     80% Продано
                                 </span>
                             </div>
