--- a/src/html/about.html
+++ b/src/html/about.html
@@ -2,7 +2,7 @@
 
 <section class="pb-12">
     <div class="swiper-slide pb-10 pt-36 relative overflow-hidden">
-        <div class="bg-[url('./img/index/slide-bgd-2.jpg')] bg-center absolute top-0 left-0 w-full h-screen -z-10 opacity-50">
+        <div class="bg-[url('./../img/index/slide-bgd-2.jpg')] bg-center absolute top-0 left-0 w-full h-screen -z-10 opacity-50">
         </div>
         <div class="bg-gradient-to-t from-blue-500 from-30% w-full h-52 absolute -z-10 bottom-0 left-0"></div>
         <div class="bg-gradient-to-t from-blue-500 from-30% w-full h-52 absolute -z-10 top-0 left-0 rotate-180"></div>
@@ -41,33 +41,33 @@
 
 <section class="gallery py-14">
     <div class="container">
-        <div class=" grid gap-4 grid-cols-3 md:grid-cols-2">
-            <img src="./img/about/gallery-ph-1.png" class="rounded-2xl flex items-center justify-center" alt="ph">
-            <img src="./img/about/gallery-ph-2.png" class="rounded-2xl flex items-center justify-center" alt="ph">
-            <img src="./img/about/gallery-ph-3.png" class="rounded-2xl flex items-center justify-center" alt="ph">
-            <img src="./img/about/gallery-ph-4.png" class="rounded-2xl flex items-center justify-center" alt="ph">
-            <img src="./img/about/gallery-ph-5.png" class="rounded-2xl flex items-center justify-center" alt="ph">
-            <img src="./img/about/gallery-ph-6.png" class="rounded-2xl flex items-center justify-center" alt="ph">
-            <img src="./img/about/gallery-ph-7.png" class="rounded-2xl flex items-center justify-center" alt="ph">
+        <div class="grid gap-4 grid-cols-2 md:grid-cols-3 md:[&>.image:nth-child(3n+1)]:col-start-auto md:[&>.image:nth-child(3n+1)]:col-end-auto [&>.image:nth-child(3n+1)]:col-start-1 [&>.image:nth-child(3n+1)]:col-end-3 md:[&>.image:nth-child(7n+1)]:col-start-1 md:[&>.image:nth-child(7n+1)]:col-end-3 md:[&>.image:nth-child(7n+7)]:col-start-2 md:[&>.image:nth-child(7n+7)]:col-end-4">
+            <div class="image">
+                <img src="./img/about/gallery-ph-1.png" class="rounded-2xl h-full w-full flex items-center justify-center" alt="ph">
+            </div>
+            <div class="image">
+                <img src="./img/about/gallery-ph-2.png" class="rounded-2xl h-full w-full flex items-center justify-center" alt="ph">
+            </div>
+            <div class="image">
+                <img src="./img/about/gallery-ph-3.png" class="rounded-2xl h-full w-full flex items-center justify-center" alt="ph">
+            </div>
+            <div class="image">
+                <img src="./img/about/gallery-ph-4.png" class="rounded-2xl h-full w-full flex items-center justify-center" alt="ph">
+            </div>
+            <div class="image">
+                <img src="./img/about/gallery-ph-5.png" class="rounded-2xl h-full w-full flex items-center justify-center" alt="ph">
+            </div>
+            <div class="image">
+                <img src="./img/about/gallery-ph-6.png" class="rounded-2xl h-full w-full flex items-center justify-center" alt="ph">
+            </div>
+            <div class="image">
+                <img src="./img/about/gallery-ph-7.png" class="rounded-2xl h-full w-full flex items-center justify-center" alt="ph">
+            </div>
         </div>
 
         <button type="button" class="font-bold text-white text-sm w-full max-w-[205px] mt-5 border border-white rounded-xl p-4 m-auto flex justify-center hover:text-blue-400 hover:bg-white transition-all md:mt-7 md:p-6 md:max-w-[286px] md:text-base">
             Показать альбом
         </button>
-
-        <div class="grid md:grid-cols-2 gap-4">
-            <div class="aspect-ratio-16/9 bg-gray-300 flex items-center justify-center">
-                <img src="./img/about/gallery-ph-7.png" alt="Image 1" class="w-full h-full object-cover" />
-            </div>
-            <div class="grid grid-cols-2 gap-4 md:grid-cols-3">
-                <div class="aspect-ratio-16/9 bg-gray-300 flex items-center justify-center">
-                    <img src="./img/about/gallery-ph-7.png" alt="Image 2" class="w-full h-full object-cover" />
-                </div>
-                <div class="aspect-ratio-16/9 bg-gray-300 flex items-center justify-center">
-                    <img src="./img/about/gallery-ph-7.png" alt="Image 3" class="w-full h-full object-cover" />
-                </div>
-            </div>
-        </div>
     </div>
 </section>
 
@@ -88,7 +88,9 @@
                     XO Complex идеально подойдёт для тех, кто любит быть в эпицентре событий.
                 </p>
             </div>
-            <img src="./img/about/club-img.png" alt="ph">
+            <div class="">
+                <img src="./img/about/club-img.png" alt="ph">
+            </div>
         </div>
 
         <ul class="border border-blue-400 rounded-2xl md:flex">
@@ -124,9 +126,9 @@
     </div>
 </section>
 
-<section class="bg-[url('./img/about/bgd-sec-changy.jpg')] bg-no-repeat bg-cover py-14 md:py-24">
+<section class="bg-[url('./../img/about/bgd-sec-changy.jpg')] bg-no-repeat bg-cover py-14 md:py-24">
     <div class="container">
-        <div class="bg-[url('./img/about/changy-bgd.png')] lg:bg-[url('./img/about/chang-bgd.png')] bg-no-repeat bg-cover pt-14 pb-9 px-5 relative md:px-10 lg:flex lg:items-center lg:gap-7 lg:py-24 lg:pr-[82px] lg:pl-[125px]">
+        <div class="bg-[url('./../img/about/changy-bgd.png')] lg:bg-[url('./../img/about/chang-bgd.png')] bg-no-repeat bg-cover pt-14 pb-9 px-5 relative md:px-10 lg:flex lg:items-center lg:gap-7 lg:py-24 lg:pr-[82px] lg:pl-[125px]">
             <img src="./img/about/phone-mob.png" class="absolute top-[-40px] right-[-30px] lg:hidden" alt="ph">
             <div>
                 <h2 class="font-bold text-white text-3xl mb-7">
@@ -217,7 +219,7 @@
     </div>
 </section>
 
-<section class="bg-[url('./img/about/apartment-bgd.jpg')] bg-no-repeat bg-cover py-14 md:py-24">
+<section class="bg-[url('./../img/about/apartment-bgd.jpg')] bg-no-repeat bg-cover py-14 md:py-24">
     <div class="container">
         <div class="bg-blue-600 py-10 px-5 rounded-2xl relative">
 
