--- a/src/html/index.html
+++ b/src/html/index.html
@@ -9,7 +9,7 @@
                     <div class="flex items-center justify-between">
                         <div class="">
                             <div
-                                class="bg-[url('./img/index/slide-bgd-1.jpg')] brightness-[0.4] bg-center absolute top-0 left-0 w-full h-[100%] -z-10 opacity-50">
+                                class="bg-[url('./../img/index/slide-bgd-1.jpg')] brightness-[0.4] bg-center absolute top-0 left-0 w-full h-[100%] -z-10 opacity-50">
                             </div>
                             <div
                                 class="bg-gradient-to-t from-blue-500 from-10% w-full h-52 absolute -z-10 bottom-0 left-0">
@@ -82,7 +82,7 @@
 
             <div class="swiper-slide pb-10 pt-36 relative overflow-hidden">
                 <div
-                    class="bg-[url('./img/index/slide-bgd-2.jpg')] bg-center absolute top-0 left-0 w-full h-[100%] -z-10 opacity-50">
+                    class="bg-[url('./../img/index/slide-bgd-2.jpg')] bg-center absolute top-0 left-0 w-full h-[100%] -z-10 opacity-50">
                 </div>
                 <div class="bg-gradient-to-t from-blue-500 from-30% w-full h-52 absolute -z-10 bottom-0 left-0"></div>
                 <div class="bg-gradient-to-t from-blue-500 from-30% w-full h-52 absolute -z-10 top-0 left-0 rotate-180">
@@ -129,7 +129,7 @@
                     <div class="flex items-center justify-between">
                         <div class="">
                             <div
-                                class="bg-[url('./img/index/slide-bgd-1.jpg')] brightness-[0.4] bg-center absolute top-0 left-0 w-full h-[100%] -z-10 opacity-50">
+                                class="bg-[url('./../img/index/slide-bgd-1.jpg')] brightness-[0.4] bg-center absolute top-0 left-0 w-full h-[100%] -z-10 opacity-50">
                             </div>
                             <div
                                 class="bg-gradient-to-t from-blue-500 from-10% w-full h-52 absolute -z-10 bottom-0 left-0">
@@ -243,7 +243,7 @@
                         <div class="flex justify-between mb-auto">
                             <img class="w-[90px]" src="./img/icons/icon-club.svg" alt="">
                             <span
-                                class="md:px-5 py-2 px-4 bg-[url('./img/icons/bgd-blue-dor-rd.svg')] bg-no-repeat bg-right-bottom h-fit rounded-tl-xl rounded-bl-xl rounded-tr-xl overflow-hidden text-xs md:text-sm text-white">
+                                class="md:px-5 py-2 px-4 bg-[url('./../img/icons/bgd-blue-dor-rd.svg')] bg-no-repeat bg-right-bottom h-fit rounded-tl-xl rounded-bl-xl rounded-tr-xl overflow-hidden text-xs md:text-sm text-white">
                                 80% Продано
                             </span>
                         </div>
@@ -290,7 +290,7 @@
                         <div class="flex justify-between mb-auto">
                             <img class="w-[90px]" src="./img/icons/icon-club.svg" alt="">
                             <span
-                                class="md:px-5 py-2 px-4 bg-[url('./img/icons/bgd-blue-dor-rd.svg')] bg-no-repeat bg-right-bottom h-fit rounded-tl-xl rounded-bl-xl rounded-tr-xl overflow-hidden text-xs md:text-sm text-white">
+                                class="md:px-5 py-2 px-4 bg-[url('./../img/icons/bgd-blue-dor-rd.svg')] bg-no-repeat bg-right-bottom h-fit rounded-tl-xl rounded-bl-xl rounded-tr-xl overflow-hidden text-xs md:text-sm text-white">
                                 80% Продано
                             </span>
                         </div>
@@ -337,7 +337,7 @@
                         <div class="flex justify-between mb-auto">
                             <img class="w-[90px]" src="./img/icons/icon-club.svg" alt="">
                             <span
-                                class="md:px-5 py-2 px-4 bg-[url('./img/icons/bgd-blue-dor-rd.svg')] bg-no-repeat bg-right-bottom h-fit rounded-tl-xl rounded-bl-xl rounded-tr-xl overflow-hidden text-xs md:text-sm text-white">
+                                class="md:px-5 py-2 px-4 bg-[url('./../img/icons/bgd-blue-dor-rd.svg')] bg-no-repeat bg-right-bottom h-fit rounded-tl-xl rounded-bl-xl rounded-tr-xl overflow-hidden text-xs md:text-sm text-white">
                                 80% Продано
                             </span>
                         </div>
@@ -736,9 +736,9 @@
     </div>
 </section>
 
-<section class="bg-[url('./img/index/buy-bgd.jpg')] bg-no-repeat bg-cover pt-14 pb-32">
+<section class="bg-[url('./../img/index/buy-bgd.jpg')] bg-no-repeat bg-cover pt-14 pb-32">
     <div class="container">
-        <div class="bg-[url('./img/index/buy-list-bg.png')] lg:bg-[url('./img/index/buy-bg-desk.png')] bg-no-repeat bg-cover lg:bg-contain pt-14 pb-28 px-5 relative md:pb-40 md:px-8 lg:pt-5 lg:px-[120px] lg:pb-[50px]">
+        <div class="bg-[url('./../img/index/buy-list-bg.png')] lg:bg-[url('./../img/index/buy-bg-desk.png')] bg-no-repeat bg-cover lg:bg-contain pt-14 pb-28 px-5 relative md:pb-40 md:px-8 lg:pt-5 lg:px-[120px] lg:pb-[50px]">
             <div class="mb-7 lg:flex lg:items-center lg:mb-[50px]">
                 <h2
                     class="font-bold text-white text-3xl mb-7 md:text-[56px] md:leading-[56px] md:text-center lg:text-left lg:m-0">
@@ -1234,7 +1234,7 @@
                             </div>
                             <div class="absolute z-20 w-full h-full top-0 left-0 p-5 flex flex-col">
                                 <div
-                                    class="bg-[url('./img/icons/bgd-blue-dor-rd.svg')] px-3 py-2 bg-no-repeat bg-cover bg-right-bottom rounded-l-lg rounded-tr-lg text-xs text-white ml-auto w-fit block md:text-sm md:p-3">
+                                    class="bg-[url('./../img/icons/bgd-blue-dor-rd.svg')] px-3 py-2 bg-no-repeat bg-cover bg-right-bottom rounded-l-lg rounded-tr-lg text-xs text-white ml-auto w-fit block md:text-sm md:p-3">
                                     Действует до <strong>30 марта 2024</strong>
                                 </div>
                                 <strong class="mt-auto text-white mb-2 md:text-lg group-hover:underline">
@@ -1256,7 +1256,7 @@
                             </div>
                             <div class="absolute z-20 w-full h-full top-0 left-0 p-5 flex flex-col">
                                 <div
-                                    class="bg-[url('./img/icons/bgd-blue-dor-rd.svg')] px-3 py-2 bg-no-repeat bg-cover bg-right-bottom rounded-l-lg rounded-tr-lg text-xs text-white ml-auto w-fit block md:text-sm md:p-3">
+                                    class="bg-[url('./../img/icons/bgd-blue-dor-rd.svg')] px-3 py-2 bg-no-repeat bg-cover bg-right-bottom rounded-l-lg rounded-tr-lg text-xs text-white ml-auto w-fit block md:text-sm md:p-3">
                                     Действует до <strong>30 марта 2024</strong>
                                 </div>
                                 <strong class="mt-auto text-white mb-2 md:text-lg group-hover:underline">
@@ -1278,7 +1278,7 @@
                             </div>
                             <div class="absolute z-20 w-full h-full top-0 left-0 p-5 flex flex-col">
                                 <div
-                                    class="bg-[url('./img/icons/bgd-blue-dor-rd.svg')] px-3 py-2 bg-no-repeat bg-cover bg-right-bottom rounded-l-lg rounded-tr-lg text-xs text-white ml-auto w-fit block md:text-sm md:p-3">
+                                    class="bg-[url('./../img/icons/bgd-blue-dor-rd.svg')] px-3 py-2 bg-no-repeat bg-cover bg-right-bottom rounded-l-lg rounded-tr-lg text-xs text-white ml-auto w-fit block md:text-sm md:p-3">
                                     Действует до <strong>30 марта 2024</strong>
                                 </div>
                                 <strong class="mt-auto text-white mb-2 md:text-lg group-hover:underline">
@@ -1300,7 +1300,7 @@
                             </div>
                             <div class="absolute z-20 w-full h-full top-0 left-0 p-5 flex flex-col">
                                 <div
-                                    class="bg-[url('./img/icons/bgd-blue-dor-rd.svg')] px-3 py-2 bg-no-repeat bg-cover bg-right-bottom rounded-l-lg rounded-tr-lg text-xs text-white ml-auto w-fit block md:text-sm md:p-3">
+                                    class="bg-[url('./../img/icons/bgd-blue-dor-rd.svg')] px-3 py-2 bg-no-repeat bg-cover bg-right-bottom rounded-l-lg rounded-tr-lg text-xs text-white ml-auto w-fit block md:text-sm md:p-3">
                                     Действует до <strong>30 марта 2024</strong>
                                 </div>
                                 <strong class="mt-auto text-white mb-2 md:text-lg group-hover:underline">
